--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -13,6 +13,7 @@
 <p>v0.8.5</p>
 <ul>
 <li>Dictionary entries for semantic category 5 = Food and Drink.</li>
+<li>Finalized the Eldamo Introductory Quenya course as version 1.0.</li>
 </ul>
 <p>v0.8.4.3 (March 9, 2023)</p>
 <ul>
