--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -51,8 +51,8 @@
 <li><b><a href="#c1-4">1.4 Guided Reading: Frodo’s Greeting</a></b></li>
 <li><b><a href="#c1-5">1.5 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c1-5-1">1.5.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c1-5-2">1.5.2 Grammar Summary</a></b>
+<li><b><a href="#c1-5-1">1.5.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c1-5-2">1.5.2 Grammar Summary</a></b></li>
 <li><b><a href="#a1-1">Answer Key 1.1</a></b></li>
 <li><b><a href="#a1-2">Answer Key 1.2</a></b></li>
 <li><b><a href="#a1-3">Answer Key 1.3</a></b></li>
@@ -68,7 +68,7 @@
 <p>It also introduces the student to the basics of Quenya scholarship, so the student understands not only the language itself but also how the language is derived from Tolkien’s own writings. The simple fact is that Tolkien never finished his account of the Elvish languages. The source material is very complex and in some places incomplete. Some amount of guesswork is required in order organize Quenya into a form usable for communication between people. This course highlights the areas where our knowledge of Quenya is less certain, and explains the choices it makes in defining Quenya where Tolkien’s own descriptions are unclear or contradictory.</p>
 
 <div class="advanced-topic">
-<p>If you are not ready for the time commitment required by this course and want just a quick overview of what Quenya is like, I recommend you look at the simpler and short “basic grammar” entry in the Eldamo lexicon:</p>
+<p>If you just want a quick overview of what Quenya is like, I recommend you look at the simpler and short “basic grammar” entry in the Eldamo lexicon:</p>
 
 <ul>
 <li><a href="https://eldamo.org/content/words/word-2572221327.html">https://eldamo.org/content/words/word-2572221327.html</a></li>
@@ -92,7 +92,7 @@
 
 <blockquote>Of the Eldarin tongues two are found in this book: the High-elven or <i>Quenya</i>, and the Grey-elven or <i>Sindarin</i>. The High-elven was an ancient tongue of Eldamar beyond the Sea, the first to be recorded in writing. It was no longer a birth-tongue, but had become, as it were, an “Elven-latin”, still used for ceremony, and for high matters of lore and song, by the High Elves [Noldor], who had returned in exile to Middle-earth at the end of the First Age (<i>The Lord of the Rings</i>, Appendix F).</blockquote>
 
-<p>In the Third Age, many users of Quenya, especially among Men, learned the language from ancient writings rather than the few remaining native speakers. As such Quenya of the Third Age had a mixture of elements, some derived from the classical written form of the language Parmaquesta, but with other features drawn from Noldorin Tarquesta, the last spoken form of the language. The form of Quenya presented in this course is more or less the language as it was used in the Third Age, with this mix of Parmaquesta and Tarquesta elements. Galadriel herself (one of the remaining Noldor) sometimes used this mixed form of the language, most notably in her recitation of the poem <i>Namárië</i> to the fellowship of the ring as they left Lórien (<i>The Lord of the Rings</i>, Book 2, Chapter 6: Farewell to Lórien).</p>
+<p>In the Third Age, many users of Quenya, especially among Men, learned the language from ancient writings rather than the few remaining native speakers. As such Quenya of the Third Age had a mixture of elements, some derived from the classical written form of the language Parmaquesta, but with other features drawn from Noldorin Tarquesta, the last spoken form of the language. The form of Quenya presented in this course is more or less the language as it was used in the Third Age, with this mix of Parmaquesta and Tarquesta elements. Galadriel herself (one of the remaining Noldor) sometimes used this mixed form of the language, most notably in her recitation of the poem <i>Namárië</i> to the fellowship of the ring as they left Lórien (<i>The Lord of the Rings</i>, Book 2, Chapter 8: Farewell to Lórien).</p>
 
 <p>The qualifier “more or less” is an important one, though. There is relatively little information about the Elvish languages in <i>The Lord of the Rings</i> itself, and not much in <i>The Silmarillion</i> either. Most of what we know of Quenya is pieced together from Tolkien’s private writings on his languages published after his death. These writings are fragmentary and sometimes inconsistent, and some guesswork is required to interpret them. As such, a more proper description of the language in the course would be “Neo-Quenya”, or post-Tolkien Quenya as interpreted by fans and students of his work (and in this particular course as interpreted by its author: Paul Strack).</p>
 
@@ -113,10 +113,10 @@
 
 <ul>
 <li><b><a href="#c1-2-1-1">1.2.1.1 Noun Plurals</a></b></li>
-<li><b><a href="#c1-2-1-2">1.2.1.2 Word for “The”</a></b>
+<li><b><a href="#c1-2-1-2">1.2.1.2 Word for “The”</a></b></li>
 </ul>
 
-<p>Nouns are the most basic part of speech, describing a person, place or thing. Quenya nouns can be group by whether they ending a consonant (consonantal), a vowel (vocalic) or the vowel <i>ë</i> (e-noun). Here is a sample of Quenya nouns with their meanings:</p>
+<p>Nouns are the most basic part of speech, describing a person, place or thing. Quenya nouns can be grouped by whether they end a consonant (consonantal), a vowel (vocalic) or the vowel <i>ë</i> (e-noun). Here is a sample of Quenya nouns with their meanings:</p>
 
 <ul class="vocab-list">
 <li><b>aiwë</b> <i>n.</i> “bird” ¹</li>
@@ -163,10 +163,10 @@
 
 <ul>
 <li><b><a href="#c1-2-2-1">1.2.2.1 Aorist Tense</a></b></li>
-<li><b><a href="#c1-2-2-2">1.2.2.2 Verb Suffixes</a></b>
-<li><b><a href="#c1-2-2-3">1.2.2.3 Present Tense</a></b>
-<li><b><a href="#c1-2-2-4">1.2.2.4 Future, Past, Perfect</a></b>
-<li><b><a href="#c1-2-2-5">1.2.2.5 Section Summary</a></b>
+<li><b><a href="#c1-2-2-2">1.2.2.2 Verb Suffixes</a></b></li>
+<li><b><a href="#c1-2-2-3">1.2.2.3 Present Tense</a></b></li>
+<li><b><a href="#c1-2-2-4">1.2.2.4 Future, Past, Perfect</a></b></li>
+<li><b><a href="#c1-2-2-5">1.2.2.5 Section Summary</a></b></li>
 </ul>
 
 <p>Like most languages, Quenya uses verbs for the action of a sentence. In dictionaries, Quenya verbs are listed by their verb stem which ends in a dash “-”, such as <i>mat-</i> “to eat”. The verb stem is not used by itself; various suffixes or inflections are added when forming sentences. Here is a sample of Quenya verbs with their meanings:</p>
@@ -988,8 +988,8 @@ Star (is shining) hour-to meeting-our-of
 <h1><a id="c1-5"></a>1.5 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c1-5-1">1.5.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c1-5-2">1.5.2 Grammar Summary</a></b>
+<li><b><a href="#c1-5-1">1.5.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c1-5-2">1.5.2 Grammar Summary</a></b></li>
 <li><b><a href="#a1-1">Answer Key 1.1</a></b></li>
 <li><b><a href="#a1-2">Answer Key 1.2</a></b></li>
 <li><b><a href="#a1-3">Answer Key 1.3</a></b></li>
@@ -1120,7 +1120,7 @@ Star (is shining) hour-to meeting-our-of
 <ul>
 <li>A Quenya <i>c</i> is always a “hard c” [k].</li>
 <li>Vowels are pronounced <i>i</i> = “ee”, <i>e</i> = “eh”, <i>a</i> = “ah”, <i>o</i> = “oh”, <i>u</i> = “oo”.</li>
-<li>Long vowels are marked with an accent <i>´</i> (<i>í, é, á, ó, ú</i>) and are roughly pronounced the same but held longer than short vowels.
+<li>Long vowels are marked with an accent <i>´</i> (<i>í, é, á, ó, ú</i>) and are roughly pronounced the same but held longer than short vowels.</li>
 <li>The double-dot ¨ (dieresis) on <i>ë</i> and <i>ö</i> has no effect on pronunciation and may be omitted; it is just a reminder that these vowels are pronounced separately.</li>
 </ul>
 
@@ -1145,8 +1145,8 @@ Star (is shining) hour-to meeting-our-of
 <li><b>Ablative:</b> <i>-(e)llo</i> “(away) from”, pl. <i>-(i)llon</i> or <i>-(i)llor</i>.</li>
 <li>Examples: <i>ambollo</i> “from a hill”, <i>mindonello</i> “from a tower”, <i>ambollon</i> “from hills”, <i>mindonillon</i> “from towers” (or <i>-llor</i> for plurals).</li>
 <li><b>Locative:</b> <i>-(e)ssë</i> “at, in, on”, pl. <i>-(i)ssen</i>.</li>
-<li>Examples: <i>ambossë</i> “on a hill”, <i>mindonessë</i> “in a tower”, <i>ambossen</i> “on hills”, <i>mindonissen</i> “in towers”</ul></li>
-
+<li>Examples: <i>ambossë</i> “on a hill”, <i>mindonessë</i> “in a tower”, <i>ambossen</i> “on hills”, <i>mindonissen</i> “in towers”</li>
+</ul></li>
 </ul>
 
 <p><a id="c1-5-2-3"></a><b>1.5.2.3 Simplified Verb (v.) Summary:</b></p>
