--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -76,8 +76,8 @@
 <li class="advanced-topic"><b><a href="#c2-7">2.7 Advanced Topic: Conceptual Development of Quenya</a></b></li>
 <li><b><a href="#c2-8">2.8 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c2-8-1">2.8.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c2-8-2">2.8.2 Grammar Summary</a></b>
+<li><b><a href="#c2-8-1">2.8.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c2-8-2">2.8.2 Grammar Summary</a></b></li>
 <li><b><a href="#a2-1">Answer Key 2.1</a></b></li>
 <li><b><a href="#a2-2">Answer Key 2.2</a></b></li>
 <li><b><a href="#a2-3">Answer Key 2.3</a></b></li>
@@ -280,7 +280,7 @@
 
 <p>Several of the items in the list above have parenthetical variants. For example word <i>nan(do)</i> “valley” has two variants: short <i>nan</i> and long <i>nando</i>. With such variants the long forms tend to be used in normal contexts, and the short forms in things like compounds, such as <i>Tasarinan</i> “Willow-vale” (LotR/469). Other words have a separate stem form listed after the word: <i>oron</i> (<i>oront-</i>) “mountain” or <i>sírë</i> (<i>síri-</i>) “river”. The first form is used when no suffixes are added (the uninflected form), but the second form is used with suffixes (inflected forms). Hence uninflected <i>oron</i> “a mountain” but inflected <i>oronto</i> “of a mountain” or <i>orontello</i> “from a mountain”.</p>
 
-<p>Stem forms can have a big effect on stress. Compare <i>ailino</i> (<i>AI.lin.o</i>) “of a lake” where the stress remains on the first syllable vs. <i>oronto</i> (<i>o.RON.to</i>) “of a mountain” where the stress moves back to the second syllable. Stems forms will be discussed in more detail in <a href="#c2-4">Section 2.4 Reading Vocabulary Entries</a>.</p>
+<p>Stem forms can have a big effect on stress. Compare <i>ailino</i> (<i>AI.lin.o</i>) “of a lake” where the stress remains on the first syllable vs. <i>oronto</i> (<i>o.RON.to</i>) “of a mountain” where the stress moves back to the second syllable. Stem forms will be discussed in more detail in <a href="#c2-4">Section 2.4 Reading Vocabulary Entries</a>.</p>
 
 <h2><a id="c2-1-5"></a>2.1.5 Pronunciation Summary</h2>
 
@@ -435,12 +435,12 @@
 <p><a id="c2-2-1-4"></a><b>2.2.1.4 The Base Vowel:</b> For many verb conjugations, it is important to identify the base vowel of the verb: its first vowel, ignoring any prefixes. Here are some verbs with base vowels underlined:</p>
 
 <ul class="vocab-list">
-<li><b>f<u>a</u>ra-</b> “to hunt”
-<li><b>l<u>e</u>lya-</b> “to travel”
-<li><b>t<u>a</u>r-</b> “to stand”
-<li><b>t<u>o</u>lu-</b> “to stand up”
-<li><b>t<u>u</u>l-</b> “to come”
-<li><b>c<u>a</u>ita-</b> “to lie (down)”
+<li><b>f<u>a</u>ra-</b> “to hunt”</li>
+<li><b>l<u>e</u>lya-</b> “to travel”</li>
+<li><b>t<u>a</u>r-</b> “to stand”</li>
+<li><b>t<u>o</u>lu-</b> “to stand up”</li>
+<li><b>t<u>u</u>l-</b> “to come”</li>
+<li><b>c<u>a</u>ita-</b> “to lie (down)”</li>
 </ul>
 
 <p>The addition of a prefix does not change the base vowel of a verb. For example, with the prefixed verb <i>entul-</i> “to return, come again” (= <i>en-</i> “again” + <i>tul-</i> “come”) the base vowel still remains <i>u</i>: <i>ent<u>u</u>l-</i>.</p>
@@ -493,7 +493,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p><a id="c2-2-2-3"></a><b>2.2.2.3 Advanced Topic: Historic Origin of the Aorist:</b> The somewhat mysterious change of <i>ë</i> to <i>i</i> in the aorist tense of basic verbs makes more sense if you know how the aorist tense originated. In the ancient aorist, the suffix was always <i>i</i>, but in Quenya’s phonetic evolution, a short final <i>i</i> became <i>e</i> (PE22/99). Thus the ancient aorist ✶<i>mati</i> “eat” became in modern Quenya <i>matë</i>. This changed did not occur when inflections were added, because the short <i>i</i> was not final, so ancient ✶<i>mati-n(i)</i> became modern <i>matin</i> “I eat”.</p>
+<p><a id="c2-2-2-3"></a><b>2.2.2.3 Advanced Topic: Historic Origin of the Aorist:</b> The somewhat mysterious change of <i>ë</i> to <i>i</i> in the aorist tense of basic verbs makes more sense if you know how the aorist tense originated. In the ancient aorist, the suffix was always <i>i</i>, but in Quenya’s phonetic evolution, a short final <i>i</i> became <i>e</i> (PE22/99). Thus the ancient aorist ✶<i>mati</i> “eat” became in modern Quenya <i>matë</i>. This change did not occur when inflections were added, because the short <i>i</i> was not final, so ancient ✶<i>mati-n(i)</i> became modern <i>matin</i> “I eat”.</p>
 <p>It is pretty clear that Quenya’s aorist was inspired by the aorist tense of Ancient Greek, especially since Tolkien used the same name for the Quenya tense. The aorist has been well understood for quite a while, since it is a verb tense that is both common and fairly straightforward. Some detailed explanations of the aorist were published in <i>Parma Eldalamberon #22</i> (PE22), which had several important documents on verbs, including the <i>Quenya Verbal System</i> written by Tolkien in 1948 (PE22/99-127) and <i>Common Eldarin Verb Structure</i> written in the early 1950s (PE22/128-140). This course makes regular use of information from these two documents in its discussion of Quenya verbs.</p>
 </div>
 
@@ -520,7 +520,7 @@
 <ul>
 <li><b>Basic:</b> Lengthen the base vowel and add an <i>–a</i> to the stem, then add any inflections.
 <ul>
-<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I eat” (<i>máta-n</i>).</li>
+<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I am eating” (<i>máta-n</i>).</li>
 </ul></li>
 <li><b>A-stem:</b> Lengthen the base vowel (if possible) and change the final <i>–a</i> to <i>-ëa</i>, then add any inflections.
 <ul>
@@ -708,7 +708,7 @@
 <ul>
 <li><b>Basic Verbs:</b> Lengthen the base vowel and add an <i>–a</i> to the stem, then add any inflections.
 <ul>
-<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I eat” (<i>máta-n</i>).</li>
+<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I am eating” (<i>máta-n</i>).</li>
 </ul></li>
 <li><b>A-stem Verbs:</b> Lengthen the base vowel (if possible) and change the final <i>–a</i> to <i>-ëa</i>, then add any inflections.
 <ul>
@@ -837,7 +837,7 @@
 <p><a id="c2-3-1-3"></a><b>2.3.1.3 <i>ná-</i> Placement:</b> The optional nature of <i>ná</i> means its placement within a sentence can be unusual. When the verb <i>ná</i> is inflected, it is usually placed in the sentence the same way as most verbs, between the subject and “object” (properly the predicate), as in <i>i atan <u>náne</u> turca</i> “the man was strong”. In the present/aorist, the <i>ná</i> can be and usually is omitted: <i>i atan (ná) turca</i> “the man is strong”. As a sentence grows in complexity, though, the omitted <i>ná</i> can be ambiguous, so sometimes the <i>ná</i> is added at the end. Consider these sentences:</p>
 
 <ul>
-<li><i>i atan turca</i> “the man [is] strong”
+<li><i>i atan turca</i> “the man [is] strong”</li>
 <li><i>i atan i fara orcor turca (ná)</i> “the man who hunts orcs is strong”
 <ul><li>Remember: Quenya <i>i</i> is both the definite article “the” and the indeclinable relative pronoun “who/which/that”.</li></ul></li>
 </ul>
@@ -1005,14 +1005,14 @@
 <li>Note ¹: The adjective <i>polda</i> refers to something that is both large and strong, or is strong due to its size. The closest English equivalent in a single word is “burly”. Something that is merely large is <i>höa</i>, and something that is strong irrespective of size is <i>turca</i>. Both <i>turca</i> and <i>polda</i> refer to physical strength, so cannot refer to something like a strong wind or river, which would be <i>turwa</i> instead: <i>turwa sírë</i> “a strong/powerful river”. The adjective <i>turwa</i> can also apply to people, but refers to power and strength of a non-physical kind, such as political power.</li>
 </ul>
 
-<p>As a reminder, the ^ reliability marker indicates forms adapted from early or rejected forms of Quenya. The forms in parenthesis indicate noun stems, used in inflected forms: <i>nér</i> (<i>ner-</i>) “man” means the uninflected form is <i>nér</i>, but with suffixes it becomes <i>ner-</i> as in plural <i>neri</i> “men”. The bracket notations like [<b>w-</b>] and [<b>þ</b>] appear for the first time in this vocabulary list and indicates the archaic pronunciation, which can be important to tengwar spelling as discussed in <a href="eldamo-intro-quenya-04.html#c4-1">Chapter 4, §4.1</a>. For example <i>vendë</i> [<i>w-</i>] means the modern pronunciation is <i>vendë</i> “maiden” versus archaic/poetic †<i>wendë</i>. These archaic pronunciations will be discussed further in <a href="eldamo-intro-quenya-03.html#c3-1-2">Chapter 3, §3.1.2</a>.</p>
+<p>As a reminder, the ^ reliability marker indicates forms adapted from early or rejected forms of Quenya. The forms in parentheses indicate noun stems, used in inflected forms: <i>nér</i> (<i>ner-</i>) “man” means the uninflected form is <i>nér</i>, but with suffixes it becomes <i>ner-</i> as in plural <i>neri</i> “men”. The bracket notations like [<b>w-</b>] and [<b>þ</b>] appear for the first time in this vocabulary list and indicates the archaic pronunciation, which can be important to tengwar spelling as discussed in <a href="eldamo-intro-quenya-04.html#c4-1">Chapter 4, §4.1</a>. For example <i>vendë</i> [<i>w-</i>] means the modern pronunciation is <i>vendë</i> “maiden” versus archaic/poetic †<i>wendë</i>. These archaic pronunciations will be discussed further in <a href="eldamo-intro-quenya-03.html#c3-1-2">Chapter 3, §3.1.2</a>.</p>
 
 <h2><a id="c2-3-4"></a>2.3.4 Section Summary</h2>
 
 <ul>
 <li><b><a href="#c2-3-4-1">2.3.4.1 Summary of <i>ná-</i></a></b></li>
 <li><b><a href="#c2-3-4-2">2.3.4.2 Summary of <i>ëa-</i></a></b></li>
-<li><b><a href="#c2-3-4-5">2.3.4.3 Pluralization Summary (Refresher)</a></b></li>
+<li><b><a href="#c2-3-4-3">2.3.4.3 Pluralization Summary (Refresher)</a></b></li>
 </ul>
 
 <p><a id="c2-3-4-1"></a><b>2.3.4.1 Summary of <i>ná-</i>:</b></p>
@@ -1145,7 +1145,7 @@
 <ul>
 <li><b><a href="#c2-4-1-1">2.4.1.1 Basic Vocabulary Elements</a></b></li>
 <li><b><a href="#c2-4-1-2">2.4.1.2 Reliability Markers</a></b></li>
-<li><b><a href="#c2-4-1-5">2.4.1.3 Language Markers</a></b></li>
+<li><b><a href="#c2-4-1-3">2.4.1.3 Language Markers</a></b></li>
 </ul>
 
 <p><a id="c2-4-1-1"></a><b>2.4.1.1 Basic Vocabulary Elements:</b> The basic elements of a word entry are as follows.</p>
@@ -1229,9 +1229,9 @@
 <li><b><a href="#c2-4-2-2">2.4.2.2 Verb Stems</a></b></li>
 </ul>
 
-<p>It is fairly common for Quenya words to use different base forms with and without inflections. Vocabulary entries have the uninflected form (also known as the simplex), followed by an optional stem form in parenthesis if it is different from the uninflected form, for example: <i>perian</i> (<i>periand-</i>) “halfling”.</p>
+<p>It is fairly common for Quenya words to use different base forms with and without inflections. Vocabulary entries have the uninflected form (also known as the simplex), followed by an optional stem form in parentheses if it is different from the uninflected form, for example: <i>perian</i> (<i>periand-</i>) “halfling”.</p>
 
-<p><a id="c2-4-2-1"></a><b>2.4.2.1 Noun Stems:</b> One common reason for nouns to have different stems forms is for there to have been sound losses, usually consonant reductions, that occurred in the simplex but not in inflected forms. An example of this is <i>perian</i> (<i>periand-</i>) “halfling”, where the final <i>nd</i> reduced to <i>n</i> in the simplex (<i>perian</i>) but was retained in inflected forms like plural <i>periandi</i> “halflings”. In such cases, the stem is longer than the simplex.</p>
+<p><a id="c2-4-2-1"></a><b>2.4.2.1 Noun Stems:</b> One common reason for nouns to have different stem forms is for there to have been sound losses, usually consonant reductions, that occurred in the simplex but not in inflected forms. An example of this is <i>perian</i> (<i>periand-</i>) “halfling”, where the final <i>nd</i> reduced to <i>n</i> in the simplex (<i>perian</i>) but was retained in inflected forms like plural <i>periandi</i> “halflings”. In such cases, the stem is longer than the simplex.</p>
 
 <p>Sometimes, though, the sound losses were in the inflected forms. An example of this is <i>soron</i> (<i>sorn-</i>) “eagle”, where the second <i>o</i> was preserved in the simplex (<i>soron</i>) but was lost when inflections were added: <i>sorni</i> “eagles”. In such cases, the stem is shorter than the simplex.</p>
 
@@ -1537,9 +1537,9 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <p>When most people think of Tolkien’s Elvish languages, they think of them as they are presented in <i>The Lords of the Rings</i> in a relatively polished form. But Tolkien worked on the Elvish languages throughout his life. Because of publications like <i>The History of Middle-earth</i> series and the academic journals <i>Parma Eldalamberon</i> (PE) and <i>Vinyar Tengwar</i> (VT), we have access to numerous drafts of Tolkien’s linguistic documents, and can study how Tolkien’s ideas on the languages evolved over his life. For the development of Quenya, it is common for scholars to divide Tolkien’s work up into three broad periods:</p>
 
 <ul>
-<li><b>Early Qenya</b> (ᴱQ): Qenya of the 1910s and 20s.
-<li><b>Middle Quenya</b> (ᴹQ): Quenya of the 1930s and 40s.
-<li><b>Late Quenya</b> (Q): Quenya of the 1950s, 60s and 70s.
+<li><b>Early Qenya</b> (ᴱQ): Qenya of the 1910s and 20s.</li>
+<li><b>Middle Quenya</b> (ᴹQ): Quenya of the 1930s and 40s.</li>
+<li><b>Late Quenya</b> (Q): Quenya of the 1950s, 60s and 70s.</li>
 </ul>
 
 <p>The spelling of Early Qenya without the <i>u</i> is deliberate. In his earliest writings, Tolkien usually named the language “Qenya” instead of the name “Quenya” he used later in his life (different spellings, same pronunciation). Within each conceptual period there are a few major documents you should be aware of.</p>
@@ -1562,7 +1562,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>Tolkien’s later work on his languages is therefore of a curious character. He continued to innovate and refine the features of the Elvish languages, but he also spent time figuring out how to make those features compatible with his already-published works. Like <i>The Silmarillion</i>, Tolkien never produced a “finished” version of his Elvish languages, and his work on the languages continued until it was interrupted by his death in 1973.</p>
 
-<p><a id="c2-7-4"></a><b>2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle-earth</i> series was published in 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
+<p><a id="c2-7-4"></a><b>2.7.4 Neo-Quenya (post-Tolkien):</b> Very little was known about Tolkien’s Elvish languages at the time of his death. It was not until <i>The History of Middle-earth</i> series was published in the 1980s, followed by the linguistic articles in the academic journals <i>Parma Eldalamberon</i> and <i>Vinyar Tengwar</i> beginning in the late 90s, that the rest of the world got an inkling of the depth and complexity of his languages. Both the book series and the academic journals began publishing the earliest material first, putting students of Elvish in the peculiar position of knowing more about the Elvish languages as Tolkien imagined them in his youth than they did about his later writings.</p>
 
 <p>With the publication of <i>The Etymologies</i> in 1987, and <i>Words, Phrases and Passages</i> twenty years later in 2007, students of Elvish were finally able to build a picture of how Tolkien imagined Elvish in the period before and after the publication of <i>The Lord of the Rings</i>. As more information became available, however, the fundamentally incomplete nature of the Elvish languages became clear. While some of his ideas about the Elvish languages were quite stable, there were other areas where Tolkien kept changing his mind. Figuring out which of his ideas were compatible with others can be very challenging, and almost always involves some degree of guesswork. This isn’t necessarily a problem for those involved in the pure academic study of Tolkien’s languages, but for those who actually want to <u>use</u> Quenya to craft compositions of their own, it can be a big problem.</p>
 
@@ -1576,8 +1576,8 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <h1><a id="c2-8"></a>2.8 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c2-8-1">2.8.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c2-8-2">2.8.2 Grammar Summary</a></b>
+<li><b><a href="#c2-8-1">2.8.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c2-8-2">2.8.2 Grammar Summary</a></b></li>
 <li><b><a href="#a2-1">Answer Key 2.1</a></b></li>
 <li><b><a href="#a2-2">Answer Key 2.2</a></b></li>
 <li><b><a href="#a2-3">Answer Key 2.3</a></b></li>
@@ -1893,7 +1893,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <ul>
 <li><b>Basic Verbs:</b> Lengthen the base vowel and add an <i>–a</i> to the stem, then add any inflections.
 <ul>
-<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I eat” (<i>máta-n</i>).</li>
+<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I am eating” (<i>máta-n</i>).</li>
 </ul></li>
 <li><b>A-stem Verbs:</b> Lengthen the base vowel (if possible) and change the final <i>–a</i> to <i>-ëa</i>, then add any inflections.
 <ul>
