--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -76,8 +76,8 @@
 <li><b><a href="#c5-6">5.6 Guided Reading: Nieninquë</a></b></li>
 <li><b><a href="#c5-7">5.7 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c5-7-1">5.7.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c5-7-2">5.7.2 Grammar Summary</a></b>
+<li><b><a href="#c5-7-1">5.7.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c5-7-2">5.7.2 Grammar Summary</a></b></li>
 <li><b><a href="#a5-1">Answer Key 5.1</a></b></li>
 <li><b><a href="#a5-2">Answer Key 5.2</a></b></li>
 <li><b><a href="#a5-3">Answer Key 5.3</a></b></li>
@@ -268,7 +268,7 @@
 <td>6.</td>
 <td><span class="transcribe" data-lang="q" data-value="r">r</span> <i>-r</i></td>
 <td><span class="transcribe" data-lang="q" data-value="v">v</span> <i>v</i></td>
-<td>&mdash;</td>
+<td>—</td>
 <td><span class="transcribe" data-lang="q" data-value="w">w</span> <i>w</i></td>
 <td><span style="color:red"><span class="transcribe" data-lang="q" data-value="y">y</span> <i>y</i></span></td>
 </tr>
@@ -491,7 +491,7 @@
 <td>6.</td>
 <td><span class="transcribe" data-lang="q" data-value="r">r</span> <i>-r</i></td>
 <td><span class="transcribe" data-lang="q" data-value="v">v</span> <i>v</i></td>
-<td>&mdash;</td>
+<td>—</td>
 <td><span class="transcribe" data-lang="q" data-value="w">w</span> <i>w</i></td>
 <td><span class="transcribe" data-lang="q" data-value="y">y</span> <i>y</i></td>
 </tr>
@@ -1336,7 +1336,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li>Note ²: The adverb <i>ú</i> “not” needs to be distinguished from the preposition <i>ú</i> “without”, which is always followed by a genitive.</li>
 </ul>
 
-<p>Here are some forms used with <i>la</i>-negation. They won’t be used in this course but you will likely see them in Quenya writing elsewhere. If you use them, they replace <i>ú</i> “not”, <i>ui</i> “no” and <i>ui-</i> “to not be”.</p>
+<p>Here are some forms used with <i>la</i>-negation. They won’t be used in this course, but you will likely see them in Quenya writing elsewhere. If you use them, they replace <i>ú</i> “not”, <i>ui</i> “no” and <i>ui-</i> “to not be”.</p>
 
 <ul class="vocab-list">
 <li><b>lá</b> <i>adv.</i> “no, not”</li>
@@ -1516,8 +1516,8 @@ to whom the air gives kisses.
 <h1><a id="c5-7"></a>5.7 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c5-7-1">5.7.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c5-7-2">5.7.2 Grammar Summary</a></b>
+<li><b><a href="#c5-7-1">5.7.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c5-7-2">5.7.2 Grammar Summary</a></b></li>
 <li><b><a href="#a5-1">Answer Key 5.1</a></b></li>
 <li><b><a href="#a5-2">Answer Key 5.2</a></b></li>
 <li><b><a href="#a5-3">Answer Key 5.3</a></b></li>
@@ -1833,7 +1833,7 @@ to whom the air gives kisses.
 <td>6.</td>
 <td><span class="transcribe" data-lang="q" data-value="r">r</span> <i>-r</i></td>
 <td><span class="transcribe" data-lang="q" data-value="v">v</span> <i>v</i></td>
-<td>&mdash;</td>
+<td>—</td>
 <td><span class="transcribe" data-lang="q" data-value="w">w</span> <i>w</i></td>
 <td><span class="transcribe" data-lang="q" data-value="y">y</span> <i>y</i></td>
 </tr>
