--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -78,8 +78,8 @@
 <li><b><a href="#c6-6">6.6 Guided Reading: Cirion’s Oath</a></b></li>
 <li><b><a href="#c6-7">6.7 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c6-7-1">6.7.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c6-7-2">6.7.2 Grammar Summary</a></b>
+<li><b><a href="#c6-7-1">6.7.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c6-7-2">6.7.2 Grammar Summary</a></b></li>
 <li><b><a href="#a6-1">Answer Key 6.1</a></b></li>
 <li><b><a href="#a6-2">Answer Key 6.2</a></b></li>
 <li><b><a href="#a6-3">Answer Key 6.3</a></b></li>
@@ -527,7 +527,7 @@
 <ul>
 <li><b><a href="#c6-3-1-1">6.3.1.1 Function of the Genitive</a></b></li>
 <li><b><a href="#c6-3-1-2">6.3.1.2 Forming the Genitive</a></b></li>
-<li class="advanced-topic"><b><a href="#c6-2-1-3">6.2.1.3 How do we know this?</a></b></li>
+<li class="advanced-topic"><b><a href="#c6-3-1-3">6.3.1.3 How do we know this?</a></b></li>
 </ul>
 
 <p><a id="c6-3-1-1"></a><b>6.3.1.1 Function of the Genitive:</b> The genitive case serves a function similar to the English preposition “of”, indicating relationships between things. It can be used to indicate:</p>
@@ -563,7 +563,7 @@
 <p>Genitives of nouns ending in <i>-ië</i> are awkward, since they would result in a sequence of three short vowels: <i>márië</i> → <i>máriëo</i> “of goodness”. To avoid this, a consonant <i>n</i> can be inserted before the genitive suffix; this will also trigger prosodic lengthening: <i>márié<u>n</u>o</i> (PE17/59). The extra <i>n</i> is unnecessary in the genitive plural: <i>máriéron</i> “of goodnesses (pl.)”.</p>
 
 <div class="advanced-topic">
-<p><a id="c6-2-1-3"></a><b>6.2.1.3 How do we know this?</b> As with other noun cases, most of what we know about how the genitive is formed comes from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases (VT6/14). That letter indicated that the genitive of <i>a</i>-nouns changed the final <i>a</i> to <i>o</i>: <i>ciryo</i> “of a ship”. We have other examples indicating the genitive of <i>o</i>-nouns remains unchanged, such as: <i>Indis i·Kiryamo</i> “The Mariner’s Wife” (UT/8). See below for a discussion of how we know the function of the genitive.</p>
+<p><a id="c6-3-1-3"></a><b>6.3.1.3 How do we know this?</b> As with other noun cases, most of what we know about how the genitive is formed comes from the so-called Plotz Letter, a 1966 or 67 letter from J.R.R. Tolkien to Richard Plotz which included a table of noun cases (VT6/14). That letter indicated that the genitive of <i>a</i>-nouns changed the final <i>a</i> to <i>o</i>: <i>ciryo</i> “of a ship”. We have other examples indicating the genitive of <i>o</i>-nouns remains unchanged, such as: <i>Indis i·Kiryamo</i> “The Mariner’s Wife” (UT/8). See below for a discussion of how we know the function of the genitive.</p>
 </div>
 
 <h2><a id="c6-3-2"></a>6.3.2 Possessive Case</h2>
@@ -888,7 +888,7 @@
 
 <p>According to Tolkien the “article = ‘the’ [<i>i</i>] is usually not used when noun is defined by a possessive [<i>-va</i>] or genitive [<i>-o</i>]” (PE17/13). This is consistent with Tolkien’s use of the possessive and genitive noun cases, where the modified noun rarely has the definite article. Thus where English would say “I saw the captain of the orcs”, Quenya would say <i>tirnen hesto i orcoron</i>. Here <i>hesto</i> does not need an article, because it is already defined by the qualifier <i>i orcoron</i>.</p>
 
-<p>This is less strange than it seems. If the sentence were rearranged slightly, English would also omit the definite article: “I saw the orcs’ captain”, <i>tirnen i orcoron hesto</i>. In English, the possessive (the orcs’) fills the determiner slot, making a second “the” redundant: “I saw the orcs’s **the captain”. The same is true of Quenya, but since the genitive or possessive can both precede or follow the modified noun, the definite article <i>i</i> is redundant either way: <i>atanwa macil</i> or <i>macil atanwa</i> both mean “a man’s sword”.</p>
+<p>This is less strange than it seems. If the sentence were rearranged slightly, English would also omit the definite article: “I saw the orcs’ captain”, <i>tirnen i orcoron hesto</i>. In English, the possessive (the orcs’) fills the determiner slot, making a second “the” redundant: “I saw the orcs’ **the captain”. The same is true of Quenya, but since the genitive or possessive can both precede or follow the modified noun, the definite article <i>i</i> is redundant either way: <i>atanwa macil</i> or <i>macil atanwa</i> both mean “a man’s sword”.</p>
 
 <p>While the definite article is typically not used with the modified noun, it can still be used with the modifying noun to mark whether it is definite. For example, with the possessive suffix <i>-va</i>, the article <i>i</i> can still be applied to the possessor. Thus <i>atanwa macil</i> mean’s “a man’s sword” (some unspecified man) but <i>i atanwa macil</i> means “the man’s sword”, referring to some specific man. The same is true of the genitive: <i>i atano má</i> “the man’s hand” vs. <i>atano má</i> “a man’s hand”.</p>
 
@@ -1011,9 +1011,9 @@
 <li><b>lempë</b> <i>num.</i> “five”</li>
 <li><b>enquë</b> <i>num.</i> “six”</li>
 <li><b>otso</b> <i>num.</i> “seven”</li>
-<li><b>toldo</b> <i>num.</i> “eight”
+<li><b>toldo</b> <i>num.</i> “eight”</li>
 <li><b>nertë</b> <i>num.</i> “nine”</li>
-<li><b>quëan</b> <i>num.</i> “ten”
+<li><b>quëan</b> <i>num.</i> “ten”</li>
 <li><b>minquë</b> <i>num.</i> “eleven”</li>
 <li><b>yunquë</b> <i>num.</i> “twelve”</li>
 </ul>
@@ -1116,7 +1116,7 @@
 
 <p>Much of the discussion on Quenya numbers above is drawn for several documents Tolkien wrote on <i>Eldarin Hands, Fingers &amp; Numerals</i> from the late 1960s (VT47/3-17; VT48/4-14). The discussion of ordinals is based on notes on Eldarin numerals (VT42/24-27) associated with an essay on <i>The Rivers and Beacon-hills of Gondor</i>, also from this same period.</p>
 
-<p>These documents introduced a new name for “10”, the word <i>quëan</i> or <i>quain</i>, the latter given in parenthesis (VT48/6). Tolkien abandoned earlier <i>cainen</i> “10” because this form was identical to <i>cainen</i> “I laid”, the 1st person past tense of <i>caita-</i> “to lay” (VT48/12). Since <i>quain</i> was in parenthesis, I think <i>quëan</i> is the independent word for “10” as derived from primitive <i>kwayam</i> (VT42/24), whereas <i>quain</i> is a reduced form used in compounds (&lt; <i>kway’m</i>), as evidenced by its appearance in <i>quainëa</i> “tenth” (VT42/25).</p>
+<p>These documents introduced a new name for “10”, the word <i>quëan</i> or <i>quain</i>, the latter given in parentheses (VT48/6). Tolkien abandoned earlier <i>cainen</i> “10” because this form was identical to <i>cainen</i> “I laid”, the 1st person past tense of <i>caita-</i> “to lay” (VT48/12). Since <i>quain</i> was in parenthesis, I think <i>quëan</i> is the independent word for “10” as derived from primitive <i>kwayam</i> (VT42/24), whereas <i>quain</i> is a reduced form used in compounds (&lt; <i>kway’m</i>), as evidenced by its appearance in <i>quainëa</i> “tenth” (VT42/25).</p>
 
 <p>These 1960s documents also included words for 13 to 19 (VT48/21), but two were only given in their primitive Elvish forms: <i>nelekwe</i> “13” and <i>kanakwe</i> “14”. The modern forms *<i>nelquë</i> and *<i>canquë</i> must be extrapolated from these, with *<i>nelquë</i> supported by <i>nelquëa</i> “thirteenth”. The third form <i>tolokwe</i> “18” might be a slip for modern *<i>toloquë</i>, or it might be a primitive form; I personally think it is primitive, and the modern form would be *<i>tolquë</i>.</p>
 
@@ -1141,9 +1141,9 @@
 <li><b>lempë</b> <i>num.</i> “five”</li>
 <li><b>enquë</b> <i>num.</i> “six”</li>
 <li><b>otso</b> <i>num.</i> “seven”</li>
-<li><b>toldo</b> <i>num.</i> “eight”
+<li><b>toldo</b> <i>num.</i> “eight”</li>
 <li><b>nertë</b> <i>num.</i> “nine”</li>
-<li><b>quëan</b> <i>num.</i> “ten”
+<li><b>quëan</b> <i>num.</i> “ten”</li>
 <li><b>minquë</b> <i>num.</i> “eleven”</li>
 <li><b>yunquë</b> <i>num.</i> “twelve”</li>
 </ul>
@@ -1232,7 +1232,7 @@
 </ul>
 
 <ul>
-<li>Note ¹: This word is a combination of <i>en-</i> “re-”, <i>yal-</i> “to call” and the gerund suffix <i>-ië</i> “-ing” (discussed in <a href=eldamo-intro-quenya-07.html#c7-2-2">Chapter 7, §7.2.2</a>), so it more literally means “recalling”.</li>
+<li>Note ¹: This word is a combination of <i>en-</i> “re-”, <i>yal-</i> “to call” and the gerund suffix <i>-ië</i> “-ing” (discussed in <a href="eldamo-intro-quenya-07.html#c7-2-2">Chapter 7, §7.2.2</a>), so it more literally means “recalling”.</li>
 <li>Note ²: This word is a combination of <i>tenna</i> “until” and <i>oio</i> “ever”, so is a reference to “forever” from now leading into the future, as opposed to the more ordinary word <i>oialë</i> which is “forever” as an eternal state, something that was true in the past as well. Thus a better translation of <i>tennoio</i> would be “forevermore”.</li>
 <li>Note ³: This word is a combination of <i>ter</i> “through” and <i>mar-</i> “to live, abide”, hence more literally meaning “through-abide” = “endure, last”.</li>
 </ul>
@@ -1305,8 +1305,8 @@ and of the One who is above all thrones for ever.
 <h1><a id="c6-7"></a>6.7 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c6-7-1">6.7.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c6-7-2">6.7.2 Grammar Summary</a></b>
+<li><b><a href="#c6-7-1">6.7.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c6-7-2">6.7.2 Grammar Summary</a></b></li>
 <li><b><a href="#a6-1">Answer Key 6.1</a></b></li>
 <li><b><a href="#a6-2">Answer Key 6.2</a></b></li>
 <li><b><a href="#a6-3">Answer Key 6.3</a></b></li>
@@ -1445,9 +1445,9 @@ and of the One who is above all thrones for ever.
 <li><b>lempë</b> <i>num.</i> “five”</li>
 <li><b>enquë</b> <i>num.</i> “six”</li>
 <li><b>otso</b> <i>num.</i> “seven”</li>
-<li><b>toldo</b> <i>num.</i> “eight”
+<li><b>toldo</b> <i>num.</i> “eight”</li>
 <li><b>nertë</b> <i>num.</i> “nine”</li>
-<li><b>quëan</b> <i>num.</i> “ten”
+<li><b>quëan</b> <i>num.</i> “ten”</li>
 <li><b>minquë</b> <i>num.</i> “eleven”</li>
 <li><b>yunquë</b> <i>num.</i> “twelve”</li>
 <li><b>er</b> <i>adj. and adv.</i> “one, alone” ¹</li>
