--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -70,8 +70,8 @@
 <li><b><a href="#c7-5">7.5 Guided Reading: Ambidexters Sentence</a></b></li>
 <li><b><a href="#c7-6">7.6 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c7-6-1">7.6.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c7-6-2">7.6.2 Grammar Summary</a></b>
+<li><b><a href="#c7-6-1">7.6.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c7-6-2">7.6.2 Grammar Summary</a></b></li>
 <li><b><a href="#a7-1">Answer Key 7.1</a></b></li>
 <li><b><a href="#a7-2">Answer Key 7.2</a></b></li>
 <li><b><a href="#a7-3">Answer Key 7.3</a></b></li>
@@ -109,12 +109,12 @@
 <tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i></td><td><i>-(i)tya</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ¹</td></tr>
-<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td></tr>
 <tr><td><nobr><b>1st pl. excl.</b></nobr> “us, we, our (but not you)”</td><td><i>me</i></td><td><i>-lmë</i></td><td><i>-(e)lma</i></td></tr>
 <tr><td><nobr><b>1st pl. incl.</b></nobr> “us, we, our (including you)”</td><td><i>ve</i></td><td><i>-lvë</i></td><td><i>-(e)lva</i></td></tr>
 <tr><td><nobr><b>2nd pl.</b></nobr> “you, your (plural)”</td><td><i>le</i></td><td><i>-ldë</i></td><td><i>-(e)lda</i></td></tr>
 <tr><td><nobr><b>3rd pl. anim.</b></nobr> “them, they, their”</td><td><i>te</i></td><td><i>-ntë</i> ²</td><td><i>-(i)nta</i></td></tr>
-<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>—</td></tr>
 <tr><td><nobr><b>1st du. excl.</b></nobr> “us two (but not you)”</td><td><i>met</i></td><td><i>-mmë</i></td><td><i>-(e)mma</i></td></tr>
 <tr><td><nobr><b>1st du. incl.</b></nobr> “both of us”</td><td><i>vet</i></td><td><i>-nquë</i></td><td><i>-(i)nqua</i></td></tr>
 <tr><td><nobr><b>2nd du.</b></nobr> “you two”</td><td><i>tyet/let</i></td><td><i>-stë</i></td><td><i>-(e)sta</i></td></tr>
@@ -133,18 +133,18 @@
 <table>
 <tr><th></th><th>Subject</th><th>Emph.</th><th>Src.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “I”</td><td><i>-n(yë)</i></td><td><i>inyë</i></td><td>PE22/162</td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you (familiar)”</td><td><i>-t(yë)</i></td><td>*<i>ityë</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you (familiar)”</td><td><i>-t(yë)</i></td><td>*<i>ityë</i></td><td>—</td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you (polite)”</td><td><i>-l(yë)</i></td><td><i>elyë</i></td><td>LotR/378</td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “he/she”</td><td><i>-s(së)</i></td><td><i>issë</i> ¹</td><td>PE22/162</td></tr>
-<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it”</td><td><i>-s(sa)</i></td><td>*<i>issa</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it”</td><td><i>-s(sa)</i></td><td>*<i>issa</i></td><td>—</td></tr>
 <tr><td><nobr><b>1st pl. excl.</b></nobr> “we (but not you)”</td><td><i>-lmë</i></td><td><i>elmë</i></td><td>PE17/136</td></tr>
 <tr><td><nobr><b>1st pl. incl.</b></nobr> “we (including you)”</td><td><i>-lvë</i></td><td><i>elvë</i></td><td>PE17/13</td></tr>
-<tr><td><nobr><b>2nd pl.</b></nobr> “you (plural)”</td><td><i>-ldë</i></td><td>*<i>eldë</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>2nd pl.</b></nobr> “you (plural)”</td><td><i>-ldë</i></td><td>*<i>eldë</i></td><td>—</td></tr>
 <tr><td><nobr><b>3rd pl. anim.</b></nobr> “they”</td><td><i>-ntë</i></td><td><i>intë</i> ²</td><td>PE17/75</td></tr>
-<tr><td><nobr><b>3rd pl. inan.</b></nobr> “they (neuter)”</td><td><i>-nta</i></td><td>*<i>inta</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>3rd pl. inan.</b></nobr> “they (neuter)”</td><td><i>-nta</i></td><td>*<i>inta</i></td><td>—</td></tr>
 <tr><td><nobr><b>1st du. excl.</b></nobr> “us two (but not you)”</td><td><i>-mmë</i></td><td>^<i>emmë</i> ³</td><td>VT43/20</td></tr>
 <tr><td><nobr><b>1st du. incl.</b></nobr> “both of us”</td><td><i>-nquë</i></td><td><i>inquë</i></td><td>VT49/51</td></tr>
-<tr><td><nobr><b>2nd du.</b></nobr> “you two”</td><td><i>-stë</i></td><td>*<i>estë</i></td><td>&mdash;</td></tr>
+<tr><td><nobr><b>2nd du.</b></nobr> “you two”</td><td><i>-stë</i></td><td>*<i>estë</i></td><td>—</td></tr>
 <tr><td><nobr><b>3rd du.</b></nobr> “they two”</td><td><i>-ttë</i></td><td>^<i>ettë</i> ⁴</td><td>PE22/121</td></tr>
 </table>
 </center>
@@ -778,7 +778,7 @@
 
 <p>Furthermore, the Elvish expectation was that the future would bring sorrow rather than joy:</p>
 
-<blockquote>In Elvish sentiment the future was not one of hope or desire, but a decay and retrogression from former bliss and power. Though inevitably it lay ahead, as of one on a journey, “looking forward” did not imply anticipation of delight. “I look forward to seeing you again” did not mean or imply “I wish to see you again, and since that is arranged and/or very likely, I am pleased.” It meant simply “I expect to see you again with the certainty of foresight (in some circumstances), or regard that as very probable” &mdash; it might be with fear or dislike, “foreboding” (NM/163).</blockquote>
+<blockquote>In Elvish sentiment the future was not one of hope or desire, but a decay and retrogression from former bliss and power. Though inevitably it lay ahead, as of one on a journey, “looking forward” did not imply anticipation of delight. “I look forward to seeing you again” did not mean or imply “I wish to see you again, and since that is arranged and/or very likely, I am pleased.” It meant simply “I expect to see you again with the certainty of foresight (in some circumstances), or regard that as very probable” — it might be with fear or dislike, “foreboding” (NM/163).</blockquote>
 
 <p>In practice the Elves had a larger variety of spatial and temporal prepositions, but the <i>epë/nó</i> dichotomy succinctly expresses the Elvish sentiments toward time.</p>
 
@@ -920,8 +920,8 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <h1><a id="c7-6"></a>7.6 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c7-6-1">7.6.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c7-6-2">7.6.2 Grammar Summary</a></b>
+<li><b><a href="#c7-6-1">7.6.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c7-6-2">7.6.2 Grammar Summary</a></b></li>
 <li><b><a href="#a7-1">Answer Key 7.1</a></b></li>
 <li><b><a href="#a7-2">Answer Key 7.2</a></b></li>
 <li><b><a href="#a7-3">Answer Key 7.3</a></b></li>
@@ -1084,10 +1084,10 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <h2><a id="c7-6-2"></a>7.6.2 Grammar Summary</h2>
 
 <ul>
-<li><b><a href="#c7-6-2-1">7.6.2.1 Emphatic Pronoun Summary</a></b>
-<li><b><a href="#c7-6-2-2">7.6.2.2 Other Pronoun Summary</a></b>
-<li><b><a href="#c7-6-2-3">7.6.2.3 Infinitive and Gerund Summary</a></b>
-<li><b><a href="#c7-6-2-4">7.6.2.4 Adverbial Noun Case Summary</a></b>
+<li><b><a href="#c7-6-2-1">7.6.2.1 Emphatic Pronoun Summary</a></b></li>
+<li><b><a href="#c7-6-2-2">7.6.2.2 Other Pronoun Summary</a></b></li>
+<li><b><a href="#c7-6-2-3">7.6.2.3 Infinitive and Gerund Summary</a></b></li>
+<li><b><a href="#c7-6-2-4">7.6.2.4 Adverbial Noun Case Summary</a></b></li>
 </ul>
 
 <p><a id="c7-6-2-1"></a><b>7.6.2.1 Emphatic Pronoun Summary:</b> The emphatic pronouns appear below; * indicates reconstructed forms and ^ forms adapted from earlier writing:</p>
