--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-08.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -63,8 +63,8 @@
 <li><b><a href="#c8-4">8.4 Guided Reading: Namárië Prose</a></b></li>
 <li><b><a href="#c8-5">8.5 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c8-5-1">8.5.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c8-5-2">8.5.2 Grammar Summary</a></b>
+<li><b><a href="#c8-5-1">8.5.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c8-5-2">8.5.2 Grammar Summary</a></b></li>
 <li><b><a href="#a8-1">Answer Key 8.1</a></b></li>
 <li><b><a href="#a8-2">Answer Key 8.2</a></b></li>
 <li><b><a href="#a8-3">Answer Key 8.3</a></b></li>
@@ -117,7 +117,7 @@
 
 <h2><a id="c8-1-3"></a>8.1.3 Formative Verbs</h2>
 
-<p>The formative verbs are one of pair of verb classes that Tolkien referred to as the “half-strong” verbs (PE22/113-115), the other being the talat-stem verbs discussed in the next section. The formative verbs were generally the result of an ancient suffix <i>-t(ă)</i> or <i>-y(ă)</i> being added to an otherwise defective verbal root. The ancient form of these verbs ended in <i>ă</i> in the aorist tense, but did not use <i>ă</i> in other tenses. These verbs were usually (though not always) intransitive, not taking a direct object.</p>
+<p>The formative verbs are one of the pair of verb classes that Tolkien referred to as the “half-strong” verbs (PE22/113-115), the other being the talat-stem verbs discussed in the next section. The formative verbs were generally the result of an ancient suffix <i>-t(ă)</i> or <i>-y(ă)</i> being added to an otherwise defective verbal root. The ancient form of these verbs ended in <i>ă</i> in the aorist tense, but did not use <i>ă</i> in other tenses. These verbs were usually (though not always) intransitive, not taking a direct object.</p>
 
 <p>The distinctive characteristic of verbs in this class is that, like basic verbs, they generally form their past tense with a nasal-infixed <i>n</i>: <i>nahta-</i> “to slay” from primitive *<i>nak-t(ă)</i> with past form <i>nacantë</i> “slew” (PE17/77; PE22/157, 164), <i>orya-</i> “to rise” from primitive *<i>or-y(ă)</i> with past form <i>oronyë</i> “rose” (PE17/64, 77; PE22/164). The nasal was inserted in between the formative suffix <i>-t(ă)</i> or <i>-y(ă)</i> and the root, and the base vowel was duplicated to make the past pronounceable: <i>nac-a-n-t-e</i> and <i>or-o-n-y-e</i>. As such they have past tenses ending in <i>-Vntë</i> or <i>-Vnyë</i>, where <i>V</i> is the base vowel. This course refers to these as half-strong past tenses.</p>
 
@@ -135,7 +135,7 @@
 <li>Formatives from Y/W roots usually have strong pasts: <i>caita-</i> → <i>cainë</i>, <i>auta-</i> → <i>vánë</i>.</li>
 </ul></li>
 <li>Formatives have (archaic?) <i>ia</i>-presents: <i>nahtia, ória</i>.</li>
-<li>These tend to be replaced in modern Quenya with <i>ea</i>-presents: <i>nahtëa, órëa</i>.</li>
+<li>These tend to be replaced in modern Quenya with <i>ea</i>-presents: <i>nahtëa, órëa</i>.
 <ul>
 <li>Ya-formative may or may not lose their <i>y</i> in the present: <i>orya-</i> → <i>órëa</i> vs. <i>melya-</i> → <i>melyëa</i>.</li>
 </ul></li>
@@ -745,7 +745,7 @@
 <ol class="exercise-list">
 <li><i>Orcor ruhtaner i taurëo periandi.</i></li>
 <li><i>Soronyentë i orcor merner nahta te.</i></li>
-<li><i>Orcor tevir periandi, naucor, eldar ar atani.</i></li>
+<li><i>Orcor tevir periandi ar naucor ar eldar ar atani.</i></li>
 <li><i>Hrávë orcor marner rottossen nu i oronti.</i></li>
 <li><i>Nwalmë periandion fastanë i orcor.</i></li>
 <li><i>I periandi nainaner umbartinta.</i></li>
@@ -841,8 +841,8 @@ of the sweet mead in lofty halls ...
 <h1><a id="c8-5"></a>8.5 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c8-5-1">8.5.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c8-5-2">8.5.2 Grammar Summary</a></b>
+<li><b><a href="#c8-5-1">8.5.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c8-5-2">8.5.2 Grammar Summary</a></b></li>
 <li><b><a href="#a8-1">Answer Key 8.1</a></b></li>
 <li><b><a href="#a8-2">Answer Key 8.2</a></b></li>
 <li><b><a href="#a8-3">Answer Key 8.3</a></b></li>
@@ -850,7 +850,7 @@ of the sweet mead in lofty halls ...
 
 <h2><a id="c8-5-1"></a>8.5.1 Chapter Vocabulary</h2>
 
-<p><b><u>Actions:</b></u></p>
+<p><b><u>Actions:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>car-</b> <i>v.</i> “to do, make”
@@ -885,7 +885,7 @@ of the sweet mead in lofty halls ...
 <li>Note ²: Though originally a talat-stem verb, it had become a weak verb. This matters only for its (weak) past: <i>sulpanë</i>.</li>
 </ul>
 
-<p><b><u>Questions and Answers:</b></u></p>
+<p><b><u>Questions and Answers:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>cesta-</b> <i>v.</i> “to ask”
@@ -915,7 +915,7 @@ of the sweet mead in lofty halls ...
 <li>Note ²: <i>ná</i> and <i>ui</i> are “yes” and “no” in answer to questions of fact, while <i>sá</i> and <i>vá</i> are “yes” and “no” for agreeing or disagreeing with requests.</li>
 </ul>
 
-<p><b><u>Happy Emotions:</b></u></p>
+<p><b><u>Happy Emotions:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>aistana</b> <i>adj.</i> “blessed”</li>
@@ -952,7 +952,7 @@ of the sweet mead in lofty halls ...
 <li>Note ¹: <span class="advanced-topic">Speculative:</span> This verb appears to be part of the subclass of u-verbs ending in <i>qu/cu</i>, and thus is conjugated like the verb <i>niqu-</i> as described in <a href="#c8-1-7">Section 8.1.7 Verb Tenses by Class</a>.</li>
 </ul>
 
-<p><b><u>Unhappy Emotions:</b></u></p>
+<p><b><u>Unhappy Emotions:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>aha</b> <i>n.</i> “rage”</li>
@@ -980,7 +980,7 @@ of the sweet mead in lofty halls ...
 <ul><li><i>pa.t.</i> *<b>yarranë</b> “growled”</li></ul></li>
 </ul>
 
-<p><b><u>Miscellaneous:</b></u></p>
+<p><b><u>Miscellaneous:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>ai</b> <i>interj.</i> “ah, alas”</li>
@@ -1099,7 +1099,7 @@ of the sweet mead in lofty halls ...
 <ol class="exercise-list">
 <li>Orcs terrified the forest’s halflings.</li>
 <li>They were afraid that orcs wanted to slay them.</li>
-<li>Orcs hate halflings, dwarves, elves and men.</li>
+<li>Orcs hate halflings and dwarves and elves and men.</li>
 <li>Wild orcs dwelled in caves under the mountains.</li>
 <li>Torment of halflings pleased the orcs.</li>
 <li>The halflings lamented their fate.</li>
