--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -65,8 +65,8 @@
 <li><b><a href="#c10-5">10.5 Guided Reading: Átaremma</a></b></li>
 <li><b><a href="#c10-6">10.6 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c10-6-1">10.6.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c10-6-2">10.6.2 Grammar Summary</a></b>
+<li><b><a href="#c10-6-1">10.6.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c10-6-2">10.6.2 Grammar Summary</a></b></li>
 <li><b><a href="#a10-1">Answer Key 10.1</a></b></li>
 <li><b><a href="#a10-2">Answer Key 10.2</a></b></li>
 <li><b><a href="#a10-3">Answer Key 10.3</a></b></li>
@@ -103,7 +103,7 @@
 <ul><li><i>cenin atan <u>i</u> quéta i aranen</i> “I see a man <u>who</u> is speaking to the king”.</li></ul></li>
 <li>When the referent is the object of the subordinate clause:
 <ul><li><i>hlarin quettar <u>i</u> Aracorno quéta</i> “I hear words <u>which</u> Aragorn is speaking”.</li></ul></li>
-<li>When the entire subordinate clause functions as object without a referent:
+<li>When the entire subordinate clause functions as an object without a referent:
 <ul>
 <li><i>hlarin <u>i</u> atan quéta i aranen</i> “I hear <u>that</u> a man is speaking to the king”.</li>
 <li>This last example could also be interpreted as “I hear the man is speaking to the king”, but the meanings are close enough that confusion is unlikely.</li>
@@ -139,7 +139,7 @@
 <p>Note that in English it is perfectly legitimate (despite what your English teacher may have told you) to split the relative pronoun from its preposition, as in “I see the men <u>who</u> you walked <u>with</u> yesterday”. That is not the case in Quenya: the preposition and the pronoun must remain together.</p>
 
 <div class="advanced-topic">
-<p><a id="c10-1-1-3"></a><b>10.1.1.3 Advanced Topic: Relative <i>sa</i>:</b> Quenya has another relative pronoun <i>sa</i> used in the late 1940s up through at least the 1950s: <i>sa</i> “that” (PE16/96-7; PE22/119). It seems likely to be related to the anaphoric demonstrative pronoun <i>sana</i> “that”, as discussed in section <a href="#c1-2-6">§10.2 Demonstrative Pronouns</a> below.</p>
+<p><a id="c10-1-1-3"></a><b>10.1.1.3 Advanced Topic: Relative <i>sa</i>:</b> Quenya has another relative pronoun <i>sa</i> used in the late 1940s up through at least the 1950s: <i>sa</i> “that” (PE16/96-7; PE22/119). It seems likely to be related to the anaphoric demonstrative pronoun <i>sana</i> “that”, as discussed in section <a href="#c10-2">§10.2 Demonstrative Pronouns</a> below.</p>
 
 <p>Based on examples, it seems to be useable in the same circumstances as indeclinable <i>i</i>. It is not that strange that two different relative pronouns can serve the same function in a sentence. For example, English uses “who/what” and demonstrative “that” more or less interchangeably:</p>
 
@@ -166,7 +166,7 @@
 <li><i>cenin i atan <u>i</u> túlë nöa</i> “I see the man <u>who</u> came yesterday”.</li>
 </ul>
 
-<p>Quenya also uses distinct base words for relative “that” (<i>i</i>) and demonstrative “that” (<i>ta</i>); see section <a href="#c1-2-6">§10.2 Demonstrative Pronouns</a> for more on <i>ta</i> “that”.</p>
+<p>Quenya also uses distinct base words for relative “that” (<i>i</i>) and demonstrative “that” (<i>ta</i>); see section <a href="#c10-2">§10.2 Demonstrative Pronouns</a> for more on <i>ta</i> “that”.</p>
 
 <ul>
 <li><i>á anta nin <u>ta</u></i> “give me <u>that</u>”.</li>
@@ -174,7 +174,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p>If you choose to use <i>sa</i> as a relative pronoun “that”, that is likewise distinct from demonstrative <i>ta</i> “that”, but somewhat less so because <i>sa</i> can also be used as an “anaphoric that” (see <a href="#c1-2-6">§10.2 Demonstrative Pronouns</a> below).</p>
+<p>If you choose to use <i>sa</i> as a relative pronoun “that”, that is likewise distinct from demonstrative <i>ta</i> “that”, but somewhat less so because <i>sa</i> can also be used as an “anaphoric that” (see <a href="#c10-2">§10.2 Demonstrative Pronouns</a> below).</p>
 
 <ul>
 <li><i>á anta nin <u>ta</u></i> “give me <u>that</u>”.</li>
@@ -414,7 +414,7 @@
 
 <p>The basic function of <i>si</i> “this” and <i>ta</i> “that” was described in demonstrative notes from 1968 (VT49/11-12, 18). This 1968 document is also the basis for the inflected demonstrative forms discussed in the next section (§10.2.2). However, the full 1968 demonstrative notes are not currently published, and we don’t have the complete context of that discussion.</p>
 
-<p>The use of <i>en</i> “yonder, then (future)” is the most difficult to determine. In <i>The Etymologies</i> of the 1930s the root √<i>EN</i> referred to “over there, yonder” (LR/356), but could also refer to the future (LR/399 under the entry for √<i>YA</i>). The same was true in notes from the 1940s and early 1950s (PE22/120, 125, 131). However, at some point in the 1950s Tolkien started using <i>en-</i> as a prefix meaning “re-, again”, as in <i>enquanta-</i> “to refill” and <i>entul-</i> “to return”. In very rough notes from 1968, Tolkien seems to say that that the repetition and distance functions of the root were related:</p>
+<p>The use of <i>en</i> “yonder, then (future)” is the most difficult to determine. In <i>The Etymologies</i> of the 1930s the root √<i>EN</i> referred to “over there, yonder” (LR/356), but could also refer to the future (LR/399 under the entry for √<i>YA</i>). The same was true in notes from the 1940s and early 1950s (PE22/120, 125, 131). However, at some point in the 1950s Tolkien started using <i>en-</i> as a prefix meaning “re-, again”, as in <i>enquanta-</i> “to refill” and <i>entul-</i> “to return”. In very rough notes from 1968, Tolkien seems to say that the repetition and distance functions of the root were related:</p>
 
 <blockquote><i>en-</i> “again” as [in] <i>enquantuva</i> is prob[ably] [?] “further, beyond” [?in respect of time influenced by ? only in] Q. <i>enta</i>, only with verbs. [?root] <i>ēn</i> (VT41/16).</blockquote>
 
@@ -451,7 +451,7 @@
 <li><b>taitë</b> <i>adv.</i> “of that sort”</li>
 <li><b>sívë</b> <i>prep.</i> “as, *this like”</li>
 <li><b>tambë</b> <i>prep.</i> “so, *that like”</li>
-<li><b>tama</b> <i>adv.</i> “that matter”</li>
+<li><b>tama</b> <i>pron.</i> “that matter”</li>
 </ul>
 
 <p>Most of the above are transparently the demonstrative elements <i>si</i> and <i>ta</i> with a case suffix added, such as <i>sissë</i> “here” = <i>si</i> + locative <i>-ssë</i> or <i>tanen</i> = <i>ta</i> + instrumental <i>-nen</i>. The others are compounds, such as <i>sinomë</i> “here” = <i>si</i> “this” + <i>nómë</i> “place” or <i>tama</i> “that matter” = <i>ta</i> “that” + <i>ma</i> “thing”. The forms <i>sir(a)</i> “hither” and <i>tar(a)</i> “thence” are (probably) archaic, based on an ancient directional suffix *<i>-dā</i> which mostly fell out of use in modern Quenya but survives in a few words as <i>-r(a)</i>. The prepositions <i>sívë</i> and <i>tambë</i> are often used together: <i>sívë cemenessë tambë menelessë</i> “as on earth, so in the heavens”.</p>
@@ -473,7 +473,7 @@
 <p>The adverbs <i>tá</i> and <i>en</i> both mean “then”, but <i>tá</i> refers to the past and <i>en</i> to the future: <i>quenten sen tá</i> “I spoke to him/her then [past]”, <i>quetuvan sen en</i> “I will speak to him/her then [future]”. It was once possible to use <i>en</i> with the aorist as a way of marking the future, but this construction is now somewhat archaic: <i>quetin sen en</i> “I speak to him then [future]”; the construction dates back to time before Quenya had formalized its future tense. Where still used it has the implication of “soon” = “I speak to him soon”.</p>
 
 <div class="advanced-topic">
-<p><a id="c10-2-2-3"></a><b>10.2.1.3 How do we know this?</b> Most of the inflected demonstratives above are drawn from the partially published 1968 notes on the demonstratives mentioned in the previous section (VT49/11-12, 18). The notes on the usage of <i>en</i> as an (archaic) future marker with the aorist are based on notes from the early 1950s (PE22/131).</p>
+<p><a id="c10-2-2-3"></a><b>10.2.1.3 How do we know this?</b> Most of the inflected demonstratives above are drawn from the partially published 1968 notes on the demonstratives mentioned in the previous section (VT49/11-12, 18). The discussion on the usage of <i>en</i> as an (archaic) future marker with the aorist are based on notes from the early 1950s (PE22/131).</p>
 </div>
 
 <h2><a id="c10-2-3"></a>10.2.3 Vocabulary: Dwelling</h2>
@@ -523,7 +523,7 @@
 <li><b>talo</b> <i>adv.</i> “thence, from there”</li>
 <li><b>talumë</b> <i>adv.</i> “that time”</li>
 <li><b>taitë</b> <i>adv.</i> “of that sort”</li>
-<li><b>tama</b> <i>adv.</i> “that matter”</li>
+<li><b>tama</b> <i>pron.</i> “that matter”</li>
 <li><b>tambë</b> <i>prep.</i> “so, *that like” ¹</li>
 <li><b>tana</b> <i>adj.</i> “that”</li>
 <li><b>tanomë</b> <i>adv.</i> “there, that place”</li>
@@ -784,14 +784,14 @@
 <li><b>aranië</b> <i>n.</i> “kingdom”</li>
 <li><b>Ëa</b> <i>n.</i> “Existence” ¹</li>
 <li><b>Eruman</b> <i>n.</i> “Heaven” ²</li>
-<li><b>han</b> <i>prep.</i> “beyond” ¹</li>
+<li><b>han</b> <i>prep.</i> “beyond” ³</li>
 <li><b>indómë</b> <i>n.</i> “will”</li>
 </ul>
 
 <ul>
-<li>Note ¹: The noun <i>Ëa</i> “Existence” is based on the verb <i>ëa-</i> “to exist” and refers to the material universe as created by <i>Eru</u>.</i>
-<li>Note ²: The noun <i>Eruman</i> is the word for “Heaven” as the realm of <i>Eru</i> and the divine, as opposed to <i>menel</i> which is “the heavens” as the realm of the stars.</i>
-<li>Note ³: The preposition <i>han</i> is used for “beyond” only in this prayer; elsewhere Tolkien used <i>lá</i> or <i>pella</i> for “beyond”.</i>
+<li>Note ¹: The noun <i>Ëa</i> “Existence” is based on the verb <i>ëa-</i> “to exist” and refers to the material universe as created by <i>Eru</i>.</li>
+<li>Note ²: The noun <i>Eruman</i> is the word for “Heaven” as the realm of <i>Eru</i> and the divine, as opposed to <i>menel</i> which is “the heavens” as the realm of the stars.</li>
+<li>Note ³: The preposition <i>han</i> is used for “beyond” only in this prayer; elsewhere Tolkien used <i>lá</i> or <i>pella</i> for “beyond”.</li>
 </ul>
 
 <p>The first five lines of the prayer are:</p>
@@ -886,8 +886,8 @@ cemenessë tambë Erumanessë.</i>
 <h1><a id="c10-6"></a>10.6 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c10-6-1">10.6.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c10-6-2">10.6.2 Grammar Summary</a></b>
+<li><b><a href="#c10-6-1">10.6.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c10-6-2">10.6.2 Grammar Summary</a></b></li>
 <li><b><a href="#a10-1">Answer Key 10.1</a></b></li>
 <li><b><a href="#a10-2">Answer Key 10.2</a></b></li>
 <li><b><a href="#a10-3">Answer Key 10.3</a></b></li>
@@ -896,7 +896,7 @@ cemenessë tambë Erumanessë.</i>
 
 <h2><a id="c10-6-1"></a>10.6.1 Chapter Vocabulary</h2>
 
-<p><b><u>Health:</b></u></p>
+<p><b><u>Health:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>asarta</b> [<b>þ</b>] <i>n.</i> “doctor”</li>
@@ -914,7 +914,7 @@ cemenessë tambë Erumanessë.</i>
 <li><b>turca</b> <i>adj.</i> “strong (physically)”</li>
 </ul>
 
-<p><b><u>Dwelling:</b></u></p>
+<p><b><u>Dwelling:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>ampano</b> <i>n.</i> “building”</li>
@@ -932,7 +932,7 @@ cemenessë tambë Erumanessë.</i>
 <li><b>tópa</b> <i>n.</i> “roof”</li>
 </ul>
 
-<p><b><u>Demonstratives:</b></u></p>
+<p><b><u>Demonstratives:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>en</b> <i>adv.</i> “yonder; then (future)”</li>
@@ -957,7 +957,7 @@ cemenessë tambë Erumanessë.</i>
 <li><b>talo</b> <i>adv.</i> “thence, from there”</li>
 <li><b>talumë</b> <i>adv.</i> “that time”</li>
 <li><b>taitë</b> <i>adv.</i> “of that sort”</li>
-<li><b>tama</b> <i>adv.</i> “that matter”</li>
+<li><b>tama</b> <i>pron.</i> “that matter”</li>
 <li><b>tambë</b> <i>prep.</i> “so, *that like” ¹</li>
 <li><b>tana</b> <i>adj.</i> “that”</li>
 <li><b>tanomë</b> <i>adv.</i> “there, that place”</li>
@@ -973,7 +973,7 @@ cemenessë tambë Erumanessë.</i>
 <li>Note ¹: The prepositions <i>sívë</i> and <i>tambë</i> are often used together: <i>sívë cemenessë tambë menelessë</i> “as on earth, so in the heavens”.</li>
 </ul>
 
-<p><b><u>Shapes and Similarity:</b></u></p>
+<p><b><u>Shapes and Similarity:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>ampa</b> <i>n.</i> “hook”</li>
@@ -999,7 +999,7 @@ cemenessë tambë Erumanessë.</i>
 <li>Note ¹: The verb <i>virya-</i> is used when the subject itself is changing (the man changed as he grew older); the verb <i>vista-</i> is used when the subject changes something else (the man changed his clothes).</li>
 </ul>
 
-<p><b><u>Reflexives:</b></u></p>
+<p><b><u>Reflexives:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>imlë</b> <i>pron.</i> “yourself (polite)”</li>
@@ -1016,7 +1016,7 @@ cemenessë tambë Erumanessë.</i>
 <li><b>-xet</b> <i>suf.</i> “they two ... themselves”</li>
 </ul>
 
-<p><b><u>Materials:</b></u></p>
+<p><b><u>Materials:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>anga</b> <i>n.</i> “iron”</li>
@@ -1033,7 +1033,7 @@ cemenessë tambë Erumanessë.</i>
 <li><b>töa</b> <i>n.</i> “wood (as material)”</li>
 </ul>
 
-<p><b><u>Miscellaneous:</b></u></p>
+<p><b><u>Miscellaneous:</u></b></p>
 
 <ul class="vocab-list">
 <li><b>aranië</b> <i>n.</i> “kingdom”</li>
