--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -61,8 +61,8 @@
 </ul></li>
 <li><b><a href="#c11-4">11.4 Chapter Summary</a></b>
 <ul>
-<li><b><a href="#c11-4-1">11.4.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c11-4-2">11.4.2 Grammar Summary</a></b>
+<li><b><a href="#c11-4-1">11.4.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c11-4-2">11.4.2 Grammar Summary</a></b></li>
 </ul></li>
 </ul>
 
@@ -78,10 +78,10 @@
 <li><b><a href="#c11-1-5">11.1.5 Section Summary</a></b></li>
 </ul>
 
-<p>English uses auxiliary verbs when forming many of its verb tenses such as the present continuous (= imperfect), perfect and future tenses: “I am eating”, “I have eaten”, “I will eat”. English can combine verb tenses (past, present, future) with verbal aspects (imperfect, perfect) for various shades of meaning. For example, a future imperfect: “I will be eating” or a past perfect/pluperfect “I had eaten”. Quenya has some similar construction which in one place Tolkien called the Quenya compound tenses (PE22/122), formed by combining the various suffixes used in Quenya tense formation.</p>
+<p>English uses auxiliary verbs when forming many of its verb tenses such as the present continuous (= imperfect), perfect and future tenses: “I am eating”, “I have eaten”, “I will eat”. English can combine verb tenses (past, present, future) with verbal aspects (imperfect, perfect) for various shades of meaning. For example, a future imperfect: “I will be eating” or a past perfect/pluperfect “I had eaten”. Quenya has some similar constructions, which in one place Tolkien called the Quenya compound tenses (PE22/122). These are formed by combining the various suffixes used in Quenya tense formation.</p>
 
 <div class="advanced-topic">
-<p>This section attempts to combine ideas on the compound tenses from the <i>Quenya Verbal System</i> (QVS) written in 1948 with the later Quenya verb system of 1950s and 60s. As such, the entire section is speculative and will involve a larger that normal amount of technical details.</p>
+<p>This section attempts to combine ideas on the compound tenses from the <i>Quenya Verbal System</i> (QVS) written in 1948 with the later Quenya verb system of 1950s and 60s. As such, the entire section is speculative and will involve a larger than normal amount of technical details.</p>
 </div>
 
 <h2><a id="c11-1-1"></a>11.1.1 Tense vs. Aspect</h2>
@@ -239,7 +239,7 @@
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are either very unlikely or are known to be false, pure hypotheticals.
 <ul>
-<li>This also functions as “emphatic” hypothetical when the result is surprising or counterintuitive.</li>
+<li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li>
 <li><i>Quí(ta)</i> (and weaker <i>qui</i>) are related to the verb <i>quista-</i> “to suppose”.</li>
 </ul></li>
 </ul>
@@ -487,7 +487,7 @@
 <li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
-<ul><li>This also functions as “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
+<ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
 </ul>
 
 <h1><a id="c11-3"></a>11.3 More Noun Classes</h1>
@@ -503,10 +503,10 @@
 <li><b><a href="#c11-3-8">11.3.8 Vocabulary: Law and Society</a></b></li>
 </ul>
 
-<p>In this section we will revisit noun declensions. Up until this point, we have grouped nouns into three basic declensions: vocalic nouns, e-nouns and consonantal nouns. But the system of declensions used by Tolkien was a bit more complex. In a document labeled the <i>Declension of Nouns</i> (DN) from the early 1930s (PE21/1-41), Tolkien grouped nouns by (a) their final vowel or consonant and (b) whether or not they triggered prosodic lengthening when suffixes were added. Although the noun cases from this document underwent extensive revisions in Tolkien’s later writings, the basic classification seems to have remained valid.</p>
+<p>In this section we will revisit noun declensions. Up until this point, we have grouped nouns into three basic declensions: vocalic nouns, e-nouns and consonantal nouns. However, the system of declensions used by Tolkien was a bit more complex. In a document labeled the <i>Declension of Nouns</i> (DN) from the early 1930s (PE21/1-41), Tolkien grouped nouns by (a) their final vowel or consonant and (b) whether or not they triggered prosodic lengthening when suffixes were added. Although the noun cases from this document underwent extensive revisions in Tolkien’s later writings, the basic classification seems to have remained valid.</p>
 
 <div class="advanced-topic">
-<p>As with the discussion of advanced verb classes in <a href="eldamo-intro-quenya-08.html#c8-1">Chapter 8, Section 8.1</a>, the information below can be considered an advanced topic. These advanced declensions draw heavily on Raccoon’s research in his <i>Tenguesta Goldorinwa</i>, most notably his examination of <a href="https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/">Noun Declensions</a>, though I do not agree with him on all the particulars. Raccoon was an early researcher into the complexities of DN and how its declensions might be extrapolated into Tolkien’s later system of noun cases from the 1950s and 60s. However, all of the following can be considered optional. If you stick with the simpler system of noun cases described earlier in the course, you will still be correct most of the time.</p>
+<p>As with the discussion of advanced verb classes in <a href="eldamo-intro-quenya-08.html#c8-1">Chapter 8, Section 8.1</a>, the information below can be considered an advanced topic. These advanced declensions draw heavily on Raccoon’s research in his <i>Tenguesta Goldorinwa</i>, most notably his examination of <a href="https://feophan.github.io/tenguesta_ngoldorinwa/morph/nou/">Noun Declensions</a>, though I do not agree with him on all the particulars. All of the following can be considered optional. If you stick with the simpler system of noun cases described earlier in the course, you will still be correct most of the time.</p>
 </div>
 
 <p>Note that in the tables below, the “long” nouns are those that trigger prosodic lengthening (see <a href="eldamo-intro-quenya-06.html#c6-1-3">Chapter 6, Section §6.1.3</a>), namely those with three or more syllables whose second-to-last syllable is light: a short vowel followed by zero or one consonant. For example, for purposes of prosodic lengthening <i>lícuma</i> “candle” counts as a long a-noun, but <i>mahalma</i> “throne” and <i>tincotéma</i> “t-series” do not. In addition, entries whose form significantly differs from normal declensions are marked in <b><i>bold</i></b> with a footnote explaining the variation.</p>
@@ -643,7 +643,7 @@
 </p>
 
 <ul>
-<li>Note ¹: The e-nouns differ from other vocalic nouns in the plural, where they use i-plurals instead of r-plurals in all but the directional noun cases. For e-nouns like <i>tyellë</i> “grade, step” that use r-plurals like <i>tyeller</i> “grades, steps”, these use genitive plural declensions like a-nouns and u-nouns: <i>tyelleron</i> “of steps”.</li>
+<li>Note ¹: The e-nouns differ from other vocalic nouns in the plural, where they use i-plurals instead of r-plurals in all but the directional noun cases. For e-nouns like <i>tyellë</i> “grade, step” which use r-plurals like <i>tyeller</i> “grades, steps”, these use genitive plural declensions like a-nouns and o-nouns: <i>tyelleron</i> “of steps”.</li>
 </ul>
 
 <p>
@@ -663,7 +663,7 @@
 </p>
 
 <ul>
-<li>Note ¹: The genitive singular of long e-nouns may have their primary stress fallon the second-to-last syllable, but without lengthening: <i>telumEo</i>.</li>
+<li>Note ¹: The genitive singulars of long e-nouns may have their primary stress fall on the second-to-last syllable, but without lengthening: <i>telumEo</i>.</li>
 <li>Note ²: Long vocalic nouns have prosodic lengthening for the singular possessive and instrumental, as well as genitive dual and the partitive plural nominative, dative and genitive, and finally the genitive plural.</li>
 </ul>
 
@@ -673,7 +673,7 @@
 <tr><th>ie-noun</th><th>Sg.</th><th>Du.</th><th>Part. Pl.</th><th>Pl.</th></tr>
 <tr><td>Nominative</td><td><i>tyalië</i></td><td><i>tyaliet</i></td><td><b><i>tyaliéli</i></b> ²</td><td><i>tyalier</i></td></tr>
 <tr><td>Dative</td><td><i>tyalien</i></td><td><i>tyalient</i></td><td><b><i>tyaliélin</i></b> ²</td><td><b><i>tyaliain</i></b> ³</td></tr>
-<tr><td>Genitive</td><td><b><i>tyaliëo</i>, <i>tyaliéno</i></b> ¹</td><td><b><i>tyaliéto</i></b> ²</td><td><b><i>tyaliélion</i></b> ²</td><td><b><i>tyaliéron</i></b> ²</tr>
+<tr><td>Genitive</td><td><b><i>tyaliëo</i>, <i>tyaliéno</i></b> ¹</td><td><b><i>tyaliéto</i></b> ²</td><td><b><i>tyaliélion</i></b> ²</td><td><b><i>tyaliéron</i></b> ²</td></tr>
 <tr><td>Possessive</td><td><b><i>tyaliéva</i></b> ²</td><td><i>tyalietwa</i></td><td><i>tyalielíva</i></td><td><b><i>tyaliaiva</i></b> ³</td></tr>
 <tr><td>Allative</td><td><i>tyalienna</i></td><td><i>tyalienta</i></td><td><i>tyalielinna(r)</i></td><td><i>tyaliennar</i></td></tr>
 <tr><td>Ablative</td><td><i>tyaliello</i></td><td><i>tyalielto</i></td><td><i>tyalielillo(n)</i></td><td><i>tyaliellon</i></td></tr>
@@ -690,9 +690,9 @@
 </ul>
 
 <div class="advanced-topic">
-<p>Most of the declensions for <i>lassë</i> “leaf” appear in the Plotz Letter of the late 1960s (VT6/14). The prosodic lengthening for long e-nouns is easy to deduce, but the stress pattern for the genitive singular is unclear. There is an example <i>Óromèo</i> (accents marking stress) in the <i>Declension of Nouns</i> from the early 1930s which indicates that the <i>e</i> would be stressed (PE21/41), though in that document it seems to receive the secondary rather than primary stress .</p>
+<p>Most of the declensions for <i>lassë</i> “leaf” appear in the Plotz Letter of the late 1960s (VT6/14). The prosodic lengthening for long e-nouns is easy to deduce, but the stress pattern for the genitive singular is unclear. There is an example <i>Óromèo</i> (accents marking stress) in the <i>Declension of Nouns</i> from the early 1930s which indicates that the <i>e</i> would be stressed (PE21/41), though in that document it seems to receive the secondary rather than primary stress.</p>
 
-<p>The dative, possessive and instrumental plurals of ie-nouns are also problematic. In declensions from the early 1930s, these nouns all show <i>iai</i> (PE22/7, 47, 50) as given above: <i>tyaliain, tyaliaiva, tyaliainen</i>. These forms are the result of a 1930s sound change whereby <i>iei</i> &gt; <i>iai</i> (PE22/7), or more exactly <i>ei</i> &gt; <i>ai</i> after <i>ı̯/y</i> (PE21/6). DN gave similar examples for the declensions of short ie-nouns: <i>niainen</i> the instrumental of <i>nië</i> “tear” (PE21/6). However, there is strong evidence that Tolkien abandoned the <i>iei</i> &gt; <i>iai</i> phonetic development, because in notes from the late 1960s he said instead that <i>ei</i> &gt; <i>é</i> after <i>y</i>, as in *<i>skeyeiti</i> &gt; <i>xiétë</i> “passing, impermanent” (PE22/155).</p>
+<p>The dative, possessive and instrumental plurals of ie-nouns are also problematic. In declensions from the early 1930s, these nouns all show <i>iai</i> (PE22/7, 47, 50) as given above: <i>tyaliain, tyaliaiva, tyaliainen</i>. These forms are the result of a 1930s sound change whereby <i>iei</i> &gt; <i>iai</i> (PE22/7), or more exactly <i>ei</i> &gt; <i>ai</i> after <i>ı̯/y</i> (PE21/6). DN gave similar examples for the declensions of short ie-nouns: <i>niainen</i> the instrumental plural of <i>nië</i> “tear” (PE21/6). However, there is strong evidence that Tolkien abandoned the <i>iei</i> &gt; <i>iai</i> phonetic development, because in notes from the late 1960s he said instead that <i>ei</i> &gt; <i>é</i> after <i>y</i>, as in *<i>skeyeiti</i> &gt; <i>xiétë</i> “passing, impermanent” (PE22/155).</p>
 
 <p>I think that the 1930s <i>iai</i>-forms might be retained by assuming there was an exaggerated sound change only for plural noun cases of ie-nouns to better differentiate them from their singular forms. If, however, you are not comfortable with this and prefer to use the known phonetic rules from the late 1960s, then the dative, possessive and instrumental plurals for ie-nouns would be identical to their singular forms: <i>tyalien, tyaliéva, tyaliénen</i>.</p>
 </div>
@@ -781,7 +781,7 @@
 
 <p>In addition to feminine i-nouns and masculine u-nouns ending in ancient long <i>ī</i> and <i>ū</i>, Quenya had a set of more general nouns ending in ancient short <i>ĭ</i> and <i>ŭ</i>. Tolkien called these semivocalic nouns or the <i>ĭ</i> and <i>ŭ</i> declensions (PE21/3, 10-13). In the simplex, the ancient <i>ĭ</i> became <i>e</i> and ancient <i>ŭ</i> became <i>o</i>, as in <i>sírë</i> (<i>síri-</i>) “river” derived from ancient *<i>sīrĭ</i> and <i>malo</i> (<i>malu-</i>) “pollen” derived from ancient *<i>malŭ</i>. Inflected forms generally restore the ancient vowel, for example: singular instrumental <i>sírinen</i> “by means of a river” and singular possessive <i>maluva</i> “pollen’s”. However the short vowels <i>ĭ, ŭ</i> could sometimes become semivowels <i>y, w</i> provided that the preceding consonant was suitable.</p>
 
-<p><a id="c11-3-4-1"></a><b>11.3.4.1 y-stem and e/i-noun:</b> For purposes of discussion, this course refers to nouns whose consonants are suitable for combination with <i>y</i> as the y-stem nouns. These nouns show <i>y</i> in the dative and dual, as well as the genitive singular and (<span class="advanced-topic">speculative</span>) dual. Where the stem’s consonant or consonant cluster is not suitable for <i>y</i>, however, then <i>i</i> is seen throughout the noun declensions; this course refers to these as e/i-nouns. These declensions are represented by <i>sírë</i> (<i>siri-</i>) “river” and <i>lindë</i> (<i>lindi-</i>) “singing, musical sound”.</p>
+<p><a id="c11-3-4-1"></a><b>11.3.4.1 y-stem and e/i-noun:</b> For purposes of discussion, this course refers to nouns whose consonants are suitable for combination with <i>y</i> as the y-stem nouns. These nouns show <i>y</i> in the dative and dual, as well as the genitive singular and (<span class="advanced-topic">speculative</span>) dual. Where the stem’s consonant or consonant cluster is not suitable for <i>y</i>, however, then <i>i</i> is seen throughout the noun declensions; this course refers to these as e/i-nouns. These declensions are represented by <i>sírë</i> (<i>síri-</i>) “river” and <i>lindë</i> (<i>lindi-</i>) “singing, musical sound”.</p>
 
 <p>
 <center>
@@ -1240,7 +1240,7 @@
 <li>Note ²: Where the case suffix for these nouns begins with a consonant cluster, such as with the directional cases, the long vowel shortens. There is an exception for w- and y-clusters like (<span class="advanced-topic">speculative</span>) <i>-twa</i> which allow a preceding long vowel. This applies to possessive pronoun suffixes as well: <i>márya</i> “his/her hand” (LotR/377; PE22/160).</li>
 <li>Note ³: Plural suffixes that begin with an <i>i</i> will result in diphthongs when added to a-, o- and u-monosyllables, which likewise shortens the long vowel such as with dative plural <i>main</i> “of hands” (PE17/161).</li>
 <li>Note ⁴: With e-monosyllables, any plural <i>i</i> suffixes would become <i>í</i>, since <i>ei</i> &gt; <i>í</i> in Quenya’s phonetic development. As a result, the plural forms of <i>pé</i> “(closed) mouth” and <i>pí</i> “small insect” would collide. In practice this is not an issue because the plurals of <i>pé</i> are not used, being replaced by their partitive plurals instead.</li>
-<li>Note ⁵: The <i>u</i>-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuva</i> “of two lips”, <i>peunen</i> “by two lips’”. <span class="advanced-topic">Speculative:</span> The genitive <i>peuo</i> “of two lips” is probably stressed on its middle vowel: <i>peùo</i>. Alternately it might use a glide consonant: <i>peuvo</i>.</li>
+<li>Note ⁵: The <i>u</i>-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuva</i> “of two lips”, <i>peunen</i> “by two lips’”. <span class="advanced-topic">Speculative:</span> The genitive dual <i>peuo</i> “of two lips” is probably stressed on its middle vowel: <i>peùo</i>. Alternately it might use a glide consonant: <i>peuvo</i>.</li>
 <li>Note ⁶: The vocalic monosyllables retain their long vowel before the genitive singular suffix <i>-o</i>, even in the case of a-monosyllables: <i>máo</i> “of a hand” (PE17/161). <span class="advanced-topic">Speculative:</span> The genitives of o-monosyllables have <i>uo</i> for reasons similar to those of oa-nouns (see <a href="#c11-3-1-2">section §11.3.1.2</a> above), except that by analogy with u-monosyllables the <i>u</i> become long: <i>húo</i> “of an owl”.</li>
 </ul>
 
@@ -1300,8 +1300,8 @@
 <h1><a id="c11-4"></a>11.4 Chapter Summary</h1>
 
 <ul>
-<li><b><a href="#c11-4-1">11.4.1 Chapter Vocabulary</a></b>
-<li><b><a href="#c11-4-2">11.4.2 Grammar Summary</a></b>
+<li><b><a href="#c11-4-1">11.4.1 Chapter Vocabulary</a></b></li>
+<li><b><a href="#c11-4-2">11.4.2 Grammar Summary</a></b></li>
 </ul>
 
 <h2><a id="c11-4-1"></a>11.4.1 Chapter Vocabulary</h2>
@@ -1419,9 +1419,9 @@
 <h2><a id="c11-4-2"></a>11.4.2 Grammar Summary</h2>
 
 <ul>
-<li><b><a href="#c11-4-2-1">11.4.2.1 Compound Tenses</a></b>
-<li><b><a href="#c11-4-2-2">11.4.2.2 Subjunctive</a></b>
-<li><b><a href="#c11-4-2-3">11.4.2.3 More Noun Classes</a></b>
+<li><b><a href="#c11-4-2-1">11.4.2.1 Compound Tenses</a></b></li>
+<li><b><a href="#c11-4-2-2">11.4.2.2 Subjunctive</a></b></li>
+<li><b><a href="#c11-4-2-3">11.4.2.3 More Noun Classes</a></b></li>
 </ul>
 
 <p><a id="c11-4-2-1"></a><b>11.4.2.1 Compound Tenses:</b> The compound tenses combine basic verb tenses with <i>-në</i> to put them in the past or <i>-(u)va</i> to put them in the future.</p>
@@ -1446,7 +1446,7 @@
 <li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
-<ul><li>This also functions as “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
+<ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
 </ul>
 
 <p><a id="c11-4-2-3"></a><b>11.4.2.3 More Noun Classes:</b> The information in the section on noun classes is too complex and specialized to summarize cleanly. Please consult the main discussion in <a href="#c11-3">section §11.3</a>.</p>
