--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -212,7 +212,7 @@
 <li><b>Consonantal Nouns:</b> Nouns ending in a consonant: <i>atan</i> “man [human being]”.<ul>
 <li>Some nouns have stems different from the base noun <i>oron</i> (<i>oront-</i>) “mountain”.</li>
 <li>See also <a href="eldamo-intro-quenya-02.html#c2-4-2-1">Chapter 2, Section §2.4.2.1</a>.</li>
-</ul>
+</ul></li>
 </ul>
 
 <p><a id="c12-2-2"></a><b>12.2.2 Plural Nouns:</b> Noun plurals vary by noun class.</p>
@@ -452,12 +452,12 @@
 <tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td><td>*<i>ityë</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td><td><i>elyë</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td><td><i>issë</i></td></tr>
-<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>&mdash;</td><td>*<i>issa</i></td></tr>
+<tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td><td>*<i>issa</i></td></tr>
 <tr><td><nobr><b>1st pl. excl.</b></nobr> “us, we, our (but not you)”</td><td><i>me</i></td><td><i>-lmë</i></td><td><i>-(e)lma</i></td><td><i>elmë</i></td></tr>
 <tr><td><nobr><b>1st pl. incl.</b></nobr> “us, we, our (including you)”</td><td><i>ve</i></td><td><i>-lvë</i></td><td><i>-(e)lva</i></td><td><i>elvë</i></td></tr>
 <tr><td><nobr><b>2nd pl.</b></nobr> “you, your (plural)”</td><td><i>le</i></td><td><i>-ldë</i></td><td><i>-(e)lda</i></td><td>*<i>eldë</i></td></tr>
 <tr><td><nobr><b>3rd pl. anim.</b></nobr> “them, they, their”</td><td><i>te</i></td><td><i>-ntë</i> ³</td><td><i>-(i)nta</i></td><td><i>intë</i></td></tr>
-<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>&mdash;</td><td>*<i>inta</i></td></tr>
+<tr><td><nobr><b>3rd pl. inan.</b></nobr> “them, they (neuter)”</td><td><i>tai</i></td><td><i>-nta</i></td><td>—</td><td>*<i>inta</i></td></tr>
 <tr><td><nobr><b>1st du. excl.</b></nobr> “us two (but not you)”</td><td><i>met</i></td><td><i>-mmë</i></td><td><i>-(e)mma</i></td><td>^<i>emmë</i></td></tr>
 <tr><td><nobr><b>1st du. incl.</b></nobr> “both of us”</td><td><i>vet</i></td><td><i>-nquë</i></td><td><i>-(i)nqua</i></td><td><i>inquë</i></td></tr>
 <tr><td><nobr><b>2nd du.</b></nobr> “you two”</td><td><i>tyet/let</i></td><td><i>-stë</i></td><td><i>-(e)sta</i></td><td>*<i>estë</i></td></tr>
@@ -592,7 +592,7 @@
 <ul>
 <li><b>Basic Verbs:</b> Lengthen the base vowel and add an <i>–a</i> to the stem, then add any inflections.
 <ul>
-<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I eat” (<i>máta-n</i>).</li>
+<li><i>mat-</i> “to eat”: <i>i atan máta</i> “the man is eating”, <i>i atani mátar</i> “the men are eating” (<i>máta-r</i>), <i>mátan</i> “I am eating” (<i>máta-n</i>).</li>
 </ul></li>
 <li><b>A-stem Verbs:</b> Lengthen the base vowel (if possible) and change the final <i>–a</i> to <i>-ëa</i>, then add any inflections.
 <ul>
@@ -622,7 +622,7 @@
 
 <p>See also <a href="eldamo-intro-quenya-03.html#c3-4-1">Chapter 3, Section §3.4.1</a>.</p>
 
-<p><a id="c12-5-5"></a><b>12.5.5 Past Tense:</b> Describes events in the past: <i>mantë</i> “ate”.
+<p><a id="c12-5-5"></a><b>12.5.5 Past Tense:</b> Describes events in the past: <i>mantë</i> “ate”.</p>
 
 <p>Quenya past tenses are fairly irregular and the summary below only discusses the common patterns. This can be considered an “advanced topic” since things are quite complex. Beginners are often better off memorizing past tenses.</p>
 
@@ -654,9 +654,7 @@
 <li><b>Basic verbs ending in <i>r</i>:</b> These depend on the ancient origin of the <i>r</i>.
 <ul>
 <li>From ancient <i>r</i> - past forms with <i>rn</i>:
-<ul>
-<li><i>car-</i> “to do, make” → <i>carnë</i> “did” from √<i>KAR</i>.</li>
-</ul>
+<ul><li><i>car-</i> “to do, make” → <i>carnë</i> “did” from √<i>KAR</i>.</li></ul></li>
 <li>From ancient <i>s</i> - past forms with <i>ss</i>, sometimes reformed to <i>rn</i>:
 <ul>
 <li><i>hlar-</i> “to hear” → <i>hlassë</i> “heard” from √<i>SLAS</i>.</li>
@@ -862,7 +860,6 @@
 <li>More rarely the present tense is used: <i>nai Eru mantëa tye</i> “may God bless you [including now]”.</li>
 <li>Wishes for “to be” statements generally omit <i>ná</i> “be”: <i>nai hínalya alassëa</i> “may your child [be] happy”.</li>
 </ul></li>
-</ul></li>
 </ul>
 
 <p>See also <a href="eldamo-intro-quenya-03.html#c3-4">Chapter 3, Section §3.4</a>.</p>
@@ -918,7 +915,7 @@
 <li><i>céla</i> “maybe not” is a negated variant of the above.</li>
 </ul></li>
 <li><i>quí(ta)</i> “supposing, possibly, might”: the strongest level of uncertainty, for things that are very unlikely or known to be false, pure hypotheticals.
-<ul><li>This also functions as “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
+<ul><li>This also functions as an “emphatic” hypothetical when the result is surprising or counterintuitive.</li></ul></li>
 </ul>
 
 <p>See also <a href="eldamo-intro-quenya-11.html#c11-2">Chapter 11, Section §11.2</a>.</p>
@@ -965,22 +962,22 @@
 <ul><li>This is written <i>an-</i> before <i>c, qu</i>, but the pronunciation is <i>añ-</i>.</li></ul></li>
 <li>Before <i>m, p</i> the prefix is <i>am-</i>.</li>
 <li>Before <i>l, r, hl, hr</i> the prefix is <i>ana-</i>. <span class="advanced-topic">The forms before <i>hr, hr</i> are speculative.</span></li>
-</ul>
+</ul></li>
 <li><b>Superlative:</b> The superlative prefix (actually a greater intensive) is <i>ar(i)-</i> “exceedingly, most”.
-<ul><li>In most cases the <i>ar-</i> prefix is simply added to the adjective.</li></ul>
+<ul><li>In most cases the <i>ar-</i> prefix is simply added to the adjective.</li></ul></li>
 <li><b>Comparison:</b> The basic formula for comparison uses the preposition <i>lá</i> “beyond”.
-<ul><li><i>Anar (ná) calima lá Isil</i> “the Sun is bright beyond the Moon”, meaning “the Sun is brighter than the Moon”.</li></ul>
+<ul><li><i>Anar (ná) calima lá Isil</i> “the Sun is bright beyond the Moon”, meaning “the Sun is brighter than the Moon”.</li></ul></li>
 <li><b>The Greatest:</b> The formula for the greatest of a group is the intensive/superlative combined with the genitive plural.
 <ul>
 <li><i>Eärendil ancalima elenion</i> “Eärendil [is] very bright among stars”.</li>
 <li><i>Anar arcalima elenion</i> “The Sun [is] most bright among stars” = “brightest”.</li>
 <li><i>Anar arcalima ilyaron</i> “The Sun is brightest of all”.</li>
-</ul>
+</ul></li>
 <li><b>Comparative Adjective and Adverb:</b> The adjective <i>amba</i> “more” and adverb <i>ambë</i> “more” may also be used.
 <ul>
 <li><i>á anta nin amba lúmë</i> “give me more time”.</li>
 <li><i>á serë ambë</i> “rest more”.</li>
-</ul>
+</ul></li>
 </ul>
 
 <p>See also <a href="eldamo-intro-quenya-09.html#c9-4">Chapter 9, Section §9.4</a>.</p>
@@ -1113,9 +1110,9 @@
 <li><b>lempë</b> <i>num.</i> “five”</li>
 <li><b>enquë</b> <i>num.</i> “six”</li>
 <li><b>otso</b> <i>num.</i> “seven”</li>
-<li><b>toldo</b> <i>num.</i> “eight”
+<li><b>toldo</b> <i>num.</i> “eight”</li>
 <li><b>nertë</b> <i>num.</i> “nine”</li>
-<li><b>quëan</b> <i>num.</i> “ten”
+<li><b>quëan</b> <i>num.</i> “ten”</li>
 <li><b>minquë</b> <i>num.</i> “eleven”</li>
 <li><b>yunquë</b> <i>num.</i> “twelve”</li>
 </ul>
@@ -1228,7 +1225,7 @@
 <td>6.</td>
 <td><span class="transcribe" data-lang="q" data-value="r">r</span> <i>-r</i></td>
 <td><span class="transcribe" data-lang="q" data-value="v">v</span> <i>v</i></td>
-<td>&mdash;</td>
+<td>—</td>
 <td><span class="transcribe" data-lang="q" data-value="w">w</span> <i>w</i></td>
 <td><span class="transcribe" data-lang="q" data-value="y">y</span> <i>y</i></td>
 </tr>
