--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -1113,7 +1113,7 @@
 <li>“that (personal relative)” <i>pron.</i> <b>ye</b></li>
 <li>“that (previously mentioned)” <i>adj.</i> <b>sana</b></li>
 <li>“that like” <i>prep.</i> <b>tambë</b></li>
-<li>“that matter” <i>adv.</i> <b>tama</b></li>
+<li>“that matter” <i>pron.</i> <b>tama</b></li>
 <li>“that place” <i>adv.</i> <b>tanomë</b></li>
 <li>“that time” <i>adv.</i> <b>talumë</b></li>
 <li>“that yonder” <i>adj.</i> <b>enta</b></li>
