--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -39,7 +39,7 @@
 
 <a id="memrise"></a><center><h1><u>Memrise Vocabulary Courses</u></h1></center>
 
-<p>Here are some links to vocabulary drills on the Memrise platform. You may want to practice each set of drills before you go through the exercises in each chapter. To make typing answers easier, the Memrise vocabulary drills omits all diaresis (¨), so that they have <i>taure</i> rather than <i>taurë</i>. Long vowels are required, however like <i>síla</i> “is shining”.</p>
+<p>Here are some links to vocabulary drills on the Memrise platform. You may want to practice each set of drills before you go through the exercises in each chapter. To make typing answers easier, the Memrise drills omit all diereses (¨), so that they have <i>taure</i> rather than <i>taurë</i>. Long vowels are required, however like <i>síla</i> “is shining”.</p>
 
 <ul>
 <li><b>Chapter 1 Drills</b> - <a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/</a></li>
