--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -52,7 +52,7 @@
 <p>Certain items after the word indicate alternate or archaic forms.</p>
 
 <ul>
-<li>An item in parenthesis indicates the stem form of nouns or adjectives when suffixes are added or in compounds.
+<li>An item in parentheses indicates the stem form of nouns or adjectives when suffixes are added or in compounds.
 <ul>
 <li><u><b>oron</b> (<b>oront-</b>) <i>n.</i> “mountain”</u> means inflected forms are based on <i>oront-</i>, such as plural <i>oronti</i> “mountains”.</li></ul></li>
 <li>A [<b>þ</b>] represents an older pronunciation (IPA [θ] = “th”) for any <i>s</i> in the word.</li>
@@ -927,7 +927,7 @@
 <li><b>talo</b> <i>adv.</i> “thence, from there”</li>
 <li><b>talta-</b> <i>v.</i> “to collapse, fall (down)”<ul><li><i>pa.t.</i> <b>talantë</b> “collapsed, fell (down)”</li></ul></li>
 <li><b>talumë</b> <i>adv.</i> “that time”</li>
-<li><b>tama</b> <i>adv.</i> “that matter”</li>
+<li><b>tama</b> <i>pron.</i> “that matter”</li>
 <li><b>tamba-</b> <i>v.</i> “to knock”<ul><li><i>pa.t.</i> *<b>tambanë</b> “knocked”</li></ul></li>
 <li><b>tambë</b> <i>prep.</i> “so, *that like”</li>
 <li>^<b>tamin</b> <i>n.</i> “forge”</li>
