--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"></meta>
-<link rel="stylesheet" type="text/css" href="../css/global.css">
+<link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 
 <script src="../js/glaemscribe.min.js"></script>
 <script src="../js/tengwar_ds_eldamar.cst.js"></script>
@@ -18,7 +18,7 @@
 
 <div id="nav-block" class="nav-block">
 <span class="hierarchy-nav">
-[<a href="index.html">Table of Contents</a>]</span>
+[<a href="index.html">Table of Contents</a>]
 </span>
 <hr class="nav-break"/>
 <span class="list-nav">
@@ -1096,7 +1096,7 @@
 <ol class="exercise-list">
 <li><i>Orcor ruhtaner i taurëo periandi.</i></li>
 <li><i>Soronyentë i orcor merner nahta te.</i></li>
-<li><i>Orcor tevir periandi, naucor, eldar ar atani.</i></li>
+<li><i>Orcor tevir periandi ar naucor ar eldar ar atani.</i></li>
 <li><i>Hrávë orcor marner rottossen nu i oronti.</i></li>
 <li><i>Nwalmë periandion fastanë i orcor.</i></li>
 <li><i>I periandi nainaner umbartinta.</i></li>
